Undo revision 20206 by [[Special:Contributions/203.52.130.142|203.52.130.142]] ([[User talk:203.52.130.142|talk]])

--- a/ᎣᏓᎸᎢ.mw
+++ b/ᎣᏓᎸᎢ.mw
@@ -1,1 +1,181 @@
-big dick
+[[File:Denali Mt McKinley.jpg|350px|thumb|[[Mount McKinley|ᎠᎩᎶᎯᏍᏗ McKinley]] (Denali) ᎭᏫᎾᏗᏢ [[Alaska]] ([[United States|USA]]) ᎤᎭ ᎯᎠ ᎤᏔᏂᎢᏍᏗ ᎬᎪᏩᏛᏗ ᎠᎴᏅᏗalenvdidsv--summit elevation ᏧᏓᎴᎿᎢ ᎾᎿ [[Earth|ᎡᎶᎯ]].]]
+{{otheruses}}
+'''ᎣᏓᎸ''' ᎨᏒᎢ [[landform]] Ꮎ extends ᎦᎸᎳᏗᏢ ᎯᎠ ᏓᎦdagatuwisdisgv [[terrain]] ᎭᏫᎾᏗᏢ ᏩᏎᎸᎯ ᎡᏍᎦᏂ.  ᎣᏓᎸ ᎨᏒᎢ ᏂᎦᎥᏊ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎠᎴ steeper ᎬᎾᏬᏍᎬ '''[[hill|ᎦᏚᏏ]]''', ᎠᎴ ᎾᎿᎢ ᎨᏒᎢ ᎤᎪᏗ overlap, ᎠᎴ usage ᎢᏳᏓᎵᎭ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎾᎥᎢ ᏄᏍᏛ ᎢᏯᏛᏁᏗ. ᎢᎦᏛ ᏚᎾᎳᏏᏛ ᎧᏁᎢᏍᏔᏅᎯ ᎣᏓᎸ ᏥᏄᏍᏗ ᏫᎪᏍᏓᏴ ᎬᏙᏗ [[topographic prominence]] ᎦᏬᎯᎸᏙᏗ ᎧᏁᎢᏍᏔᏅᎯ ᏧᎬᏩᎶᏗ: ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ''[[Encyclopædia Britannica]]'' ᎧᏁᎦ ᎢᏯᏛᏁᏗ prominence 610 [[metre|m]] (2,000 [[foot (unit of length)|ft]]).
+
+ᏙᏓᎸ ᎫᏢᏗ 52% Asia, 36% ᎤᏴᏢ ᎠᎺᎵᎨ, 25% Europe, 22% ᎤᎦᎾᏭ ᎠᎺᎵᎨ, 17% Australia, ᎠᎴ 3% Africa. ᏥᏄᏍᏗ ᏂᎦᏛ, 24% ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎦᏙᎯ ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᎨᏒᎢ mountainous. ᎾᏍᎩ ᎾᏍᏇ, 1 ᎭᏫᎾᏗᏢ 10 ᏴᏫ ᎠᎴᏂᏓᏍᏗ ᎭᏫᎾᏗᏢ mountainous regions. ᏂᎦᏛ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ rivers ᎠᎴ ᎨᎶᎸᎯ ᏂᏛᎴᏅᏓ ᎣᏓᎸ ᏙᏧᏓᎴᏅ, ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎠᏰᎵ ᎢᏴ ᏴᏫ ᎠᏁᎲ ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᏙᏓᎸ ᎾᏍᎩᎾᎢ ᎠᎹ. [http://72.14.203.104/search?q=cache:mrpECr4ad8UJ:animana.org/tab2/22troubleattop.shtml+&hl=en&lr=lang_en]
+<!-- Google cache for the dead link http://www.animana.org/tab2/22troubleattop.shtml -->
+
+ᎯᎠ adjective '''montane''' ᎨᏒᎢ ᎬᏔᏅᎯ ᏄᏍᏛ ᎧᏃᎮᏗ mountainous areas ᎠᎴ ᎯᎠ ᏧᏓᎴᏅᏓ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᎠᏂ.
+
+== Heights ==
+Heights ᏙᏓᎸ ᎠᎴ ᏂᎦᎥᏊ ᎠᏓᏁᎸ ᏥᏄᏍᏗ heights ᎦᎸᎳᏗᏢ ᎤᏁᎫᏥᏛ [[sea level|ᎠᎺᏉᎯ ᎤᏩᎾᏕᏍᎩ]]. ᎯᎠ [[Himalayas]] ᎢᎦᏘᎭ ᎢᎬᏁᎸ 5&nbsp;km ᎦᎸᎳᏗᏢ ᎠᎺᏉᎯ ᎤᏩᎾᏕᏍᎩ, whilst ᎯᎠ [[Andes]] ᎢᎦᏘᎭ ᎢᎬᏁᎸ 4 [[kilometre|km]]. ᎤᎪᏗᏗ ᏐᎢ ᎣᏓᎸ ranges ᎢᎦᏘᎭ ᎢᎬᏁᎸ 2-2.5 km. 
+
+ᎯᎠ ᏩᎦᎸᎳᏗᏴ ᎣᏓᎸ ᎾᎿ ᎡᎶᎯ ᎨᏒᎢ [[Mount Everest|Everest]], 8,848&nbsp;[[metre|m]], ᎠᏫᏒᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎤᎪᏗᏗ significant ᎣᏓᎸ ᎠᏍᏓᏅᏅ, ᎯᎠ [[Himalaya]]. ᏐᎢ definitions ᏂᎦᏛᎢ ᎠᎴ ᏰᎵᏊ. ᎯᎠ ᏫᎪᏍᏓᏴ Ꮎ ᎨᏒᎢ farthest ᏂᏛᎴᏅᏓ ᎯᎠ centre ᎯᎠ [[Earth|ᎡᎶᎯ]] ᎨᏒᎢ [[Mount Chimborazo|Chimborazo]] ᎭᏫᎾᏗᏢ [[Ecuador]]. ᎾᎾᎢ 6,272&nbsp;m ᎦᎸᎳᏗᏢ ᎠᎺᏉᎯ ᎤᏩᎾᏕᏍᎩ ᎾᏍᎩ ᎨᏒᎢ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏧᎳᎭ ᎯᎠ tallest ᏫᎪᏍᏓᏴ ᎭᏫᎾᏗᏢ ᎯᎠ [[Andes]], ᎠᎴ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎡᎶᎯ bulges ᎾᎾᎢ ᎯᎠ ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ ᎠᎴ Chimborazo ᎨᏒᎢ ᎤᏙᎯᏳ ᎠᏍᏚᏗ ᎯᎠ ᎡᎶᎯ ᎠᏰᎵ ᎠᏍᏓᏅᏅ, ᎾᏍᎩ ᎨᏒᎢ 2,150&nbsp;m ᎤᏗᏗᏢ ᎤᏣᏘᎾ ᏂᏛᎴᏅᏓ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ centre ᎬᎾᏬᏍᎬ Everest. ᎯᎠ ᏫᎪᏍᏓᏴ Ꮎ rises farthest ᏂᏛᎴᏅᏓ Ꮝ ᎠᎴᏅᏗalenvdidsv ᎨᏒᎢ [[Mauna Kea]] ᎾᎿ [[Hawaii]], ᎾᏍᎩ ᎤᏤᎵ ᏫᎪᏍᏓᏴ ᎨᏒᎢ ᎦᏬᎯᎸᏙᏗ 9,000&nbsp;m ᎦᎸᎳᏗᏢ Ꮝ ᎠᎴᏅᏗalenvdidsv ᎾᎿ ᎯᎠ ᎠᏯᏖᏃᎯ ᎯᎠ [[Pacific Ocean|Pacific ᎠᎺᏉᎯ]].
+
+ᎾᎾᎢ 26 [[kilometer|km]] (Fraknoi et al., 2004), ᎯᎠ tallest ᎤᎾᏅᏛ ᎣᏓᎸ ᎭᏫᎾᏗᏢ ᎯᎠ [[solar system|solar ᎢᏯiyahdvnelidasdi]] ᎨᏒᎢ [[Olympus Mons]], ᎤᏂᎷᏨ ᎾᎿ [[Mars (planet)|Mars]].
+
+== Characteristics ==
+ᎯᎠ altitude ᏙᏓᎸ ᎤᏅᏔᏂᏓᏍᏗ Ꮎ ᎯᎠ tops ᎬᏂᎨᏒ ᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎤᏴᏢ layers ᎯᎠ ᎦᏃᎴᏍᎬ. ᎤᏅᏌ ᎠᎴ ᏫᏄᎳᏍᏙᏗ ᎢᏳᏓᎵᎭ ᎢᏳᏍᏗ ᎧᏃᎮᏗ [[glaciation]] ᎠᎴ [[erosion]] ᏗᎬᏩᎶᏒ ᎤᏯᏨᏒ ᎠᎵᏖᎸᏗ. ᎪᎯ ᎠᏛᎯᏍᏗ ᎯᎠ classic ᎣᏓᎸ [[pyramidal peak|ᏫᎪᏍᏓᏴ]] ᎤᏙᏢᏒᎢ. ᎢᎦᏛ ᏙᏓᎸ ᎤᎭ [[glacial lake|glacial ᎥᏓᎵ]], ᎪᏢᏅᎯ ᎾᎥᎢ melting glaciers; ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎾᎿᎢ ᎠᎴ ᎠᎦᏎᏍᏔᏅ 3,000 ᎭᏫᎾᏗᏢ [[Bhutan]].
+[[File:Rockies USA1.jpg|thumb|left|300px|ᎢᎦᏛ  ᎯᎠ [[Rocky Mountains|Rocky ᎣᏓᎸ]] ᎠᏍᏓᏅᏅ ᎭᏫᎾᏗᏢ Colorado]]
+ᏰᎵᏊ ᎢᎦᎢ ᎢᏅ ᎢᎦᏘ ᏙᏓᎸ ᎤᎭ ᎤᏙᎯᏳ ᏄᏓᎴᎿᎥ climatic conditions ᎾᎾᎢ ᎯᎠ ᎦᏚᎢ ᎬᎾᏬᏍᎬ ᎾᎾᎢ ᎯᎠ ᎠᎴᏅᏗalenvdidsv, ᎠᎴ ᏫᎵ ᎯᎠ ᎢᏴ ᎤᎭ ᏄᏓᎴᎿᎥ [[life zone|ᎥᎴᏂᏙᎲ ᎡᎶᎯ ᎠᏍᏓᏅᏅ]]ᎾᎾᎢ ᏄᏓᎴᎿᎥ altitudes ᎾᎿ ᎤᎾᏤᎵ slopes. ᎯᎠ ᏗᎦdigakohidi ᎠᎴ ᎡᎿᎢ ᎡᎥ ᎡᎶᎯ ᎠᏍᏓᏅᏅ ᎠᎴ ᎾᏍᎩ ᏯᏛᎾ isolated ᎯᎳᎪ ᎢᏳ ᎯᎠ zones ᎦᎸᎳᏗᏢ ᎠᎴ ᎡᎳᏗᏢ ᎠᎴ inhospitable, ᎠᎴ ᎤᎪᏗᏗ unique species ᏄᎵᏍᏔᏅ ᎾᎿ mountainsides ᏥᏄᏍᏗ ᏄᎵᏍᏔᏅ. ᎦᎶᏒᏍᏔᏅ ᏕᎦᎸᏛ ᎧᏁᏌᎢ ᎠᎴ ᎤᎾᏅᏛ ᏥᏄᏍᏗ [[sky island|ᎦᎷᎾᏗ ᎠᎽᏰᎵ]]. [[Cloud forest|ᎤᎶᎩᎸ ᎠᏙᎯ ᎢᎾᎨ]]ᎠᎴ forests ᎾᎿ ᎣᏓᎸ ᏗᏍᏆᎨᏂ ᎦᏙ ᎤᏍᏗ attract moisture ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᏃᎴ, creating unique [[ecosystem]].
+
+ᏙᏓᎸ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᎥᏊ ᎠᏑᏰᏍᏔᏅ ᎾᏍᎩᎾᎢ [[human|ᏴᏫ]] habitation; ᎯᎠ ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ ᎨᏒᎢ harsher, ᎦᏲᎵᎨ ᎠᎵᏍᏓᏴᏗ ᎨᏒᎢ ᏰᎵ ᎠᏩᏛᏗ, ᎠᎴ ᎾᎿᎢ ᎨᏒᎢ ᎤᏍᏗ ᎤᏩᎾᏕᏍᎩ ᎦᏙᎯ ᏗᎾᏙᎳᎩ ᎾᏍᎩᎾᎢ [[farming|ᏓᎦᎶᎩᏍᎬ]]. ᎾᎾᎢ ᎤᏙᎯᏳ ᎦᎸᎳᏗ altitudes, ᎾᎿᎢ ᎨᏒᎢ ᎦᏲᎵᎨ [[oxygen]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏃᎴ, ᎠᎴ ᎦᏲᎵᎨ ᎠᎵᏍᏕᎸᏙᏗ ᏗᎦᏘᎴᎩ solar radiation (UV). [[Acute mountain sickness|Acute ᎣᏓᎸ ᎤᏢᏥᏰᏍᎩ]] (ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ [[Hypoxia (medical)|hypoxia]] - ᎦᎷᎶᎩ oxygen ᎭᏫᎾᏗᏢ ᎯᎠ ᎩᎬ) affects ᎦᏬᎯᎸᏙᏗ ᎠᏰᎵ ᎢᏴ lowlanders ᎦᎪ ᎤᏩᏍᎬ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᎦᏲᎵ ᎢᏧᏟᎶᏛ ᎦᎸᎳᏗᏢ 3,500 metres. Despite ᎢᎦᏛ biological adaptation ᎾᎥᎢ peoples ᎦᎪ ᎤᎭ ᎠᎴᏂᏙᎸ ᎾᎿ ᏙᏓᎸ ᎾᏍᎩᎾᎢ ᎢᏯᏍᎪᎯᏧᏈ ᎠᎴ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ ᏧᏕᏘᏴᏓ, ᏧᎾᏍᏗᎢ' ᎢᎦᏘᎭ ᎢᎬᏁᎸ [[birthweight]] ᎨᏒᎢ ᎠᎦᏲᎳᏛᎯ ᎾᎥᎢ 100 grams ᎾᏍᎩᎾᎢ ᏂᎦᎥᎢ 1,000-metre ᎤᏁᏉᎢᏍᏗ ᎭᏫᎾᏗᏢ altitude.
+
+ᎤᎪᏗᏗ ᏙᏓᎸ ᎯᎠ ᎡᎶᎯ ᎤᎭ ᏭᏪᏙᎢ ᎠᎦᏍᎦᏂ ᎭᏫᎾᏗᏢ ᎤᎾᏤᎵ ᏂᎬᏩᏍᏛ ᎤᏔᏂᏗ ᎦᏙᎯ, ᎠᎴ ᎠᎴ ᎪᎯ ᎢᎦ ᎢᎬᏱᏗᏢ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[recreation]]. ᎢᎦᏛ ᏙᏓᎸ ᎠᎴ ᎤᏙᎯᏳ ᎤᏦᏍᏗ ᎦᎴᎬ, ᎠᎴ ᎠᏍᎪᎸᏔᏅ spectacular ᏫᏓᎧᏃᏗᏱ.  ᎢᎦᏛ ᏴᏫ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎠᎵᎮᎵᏍᏗ ᎯᎠ ᏗᎾᏁᎶᎲᏍᎩ [[mountaineering]].  ᏙᏓᎸ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎯᎠ site ᎾᏍᎩᎾᎢ ᎯᎠ ᏗᎾᏁᎶᎲᏍᎩ [[downhill skiing]]. ᏴᏫ engaging ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎯᎠ activities ᎢᏳᏓᎵᎭ ᎡᏙᎠ ᎾᎾᎢ [[mountain resort|ᎣᏓᎸ ᏴᏫ ᎤᏁᏓᏍᏗ]]ᎤᏁᏍᎨᎲ ᎾᏍᎩᎾᎢ ᎯᎠ ᎤᏰᎸᏛᎢ.
+
+== Geology ==
+[[File:himalaya_annotated.jpg|thumb|right|350px|ᎯᎠ [[Himalaya]]n ᎣᏓᎸ ᎠᏍᏓᏅᏅ ᎬᏙᏗ [[Mount Everest|ᎠᎩᎶᎯᏍᏗ Everest]].]]
+ᎣᏓᎸ ᎨᏒᎢ ᎤᏠᏱᎭ ᎠᏛᎯᏍᏔᏅ ᎾᎥᎢ ᎯᎠ ᎠᏓᏅᏏᏙᎠ [[plate tectonics|lithospheric ᏗᏖᎵᏙ]], ᎢᏳᏍᏗᏊ [[orogeny|orogenic ᎠᏓᏅᏏᏙᎠ]] ᎠᎴ [[epeirogenic movement|epeirogenic ᎠᏓᏅᏏᏙᎠ]]. ᎯᎠ compressional ᎠᏂᏌᏙᏯᏍᎩ, isostatic uplift ᎠᎴ intrusion [[igneous rock|igneous ᎢᏳᏍᏗ ᏯᏛᎿ]] ᎠᏂᏌᏙᏯᏍᎩ ᎦᏚᎢ ᏅᏯ upwards, creating landform ᎦᎸᎳᏗᎨᏍᏙᏗ ᎬᎾᏬᏍᎬ ᎯᎠ ᏓᎦdagatuwisdisgv ᏄᏍᏛ ᏗᎨᎦᏃᏗ. ᎯᎠ ᏂᎦᏛᎢ ᎯᎠ ᏄᏍᏛ ᏗᎧᏃᏗ ᏗᎪᏢᏅ ᎾᏍᎩ ᎢᏳᏍᏗᏊ ᎦᏚᏏ ᎠᎴ, ᎢᏳᏃ ᎦᎸᎳᏗᎨᏍᏙᏗ ᎠᎴ steeper, ᎣᏓᎸ. ᎯᎠ ᎤᏙᎯᏳᎯᏯ heights ᏄᏍᏛ ᏗᎨᎦᏃᏗ termed ᏙᏓᎸ ᎠᎴ ᏗᎦᏚᏏ ᏧᏓᎴᎾᎯ ᏰᎵ ᎡᏆᏯ ᎧᎵ ᏗᏙᎳᎩ ᎡᏍᎦᏂ ᎤᏤᎵ [[topography]]. ᎯᎠ ᎠᏂᏯᏩᏍᎩ ᏄᎬᏫᏳᏒ ᏙᏓᎸ tend ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎦᏅᎯᏓ linear arcs, ᎠᎾᏓᏎᎮᎲᎢ tectonic ᎠᏖᎵᏙ boundaries ᎠᎴ ᎠᎵᏂᎬᏁᏗᎢ. ᎣᏓᎸ ᏗᏁᏝᎾ tends ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ discrete ᏗᎴᏪᎢᏍᏙᏗ, ᎠᏂᏏᏴᏫᎭ ᏩᏎᎸᎯ ᏥᏄᏍᏗ [[orogeny]]. ᎯᎠ orogeny ᎠᎾᏍᎬᏘ ᎣᏂ ᎢᏧᏆᏗᏅᏓ ᏧᏕᏘᏴᏓ, ᎠᎴ ᎯᎠ uplifted ᎤᏔᏂᏗ ᎦᏙᎯ ᎨᏒᎢ ᎠᎴᏂᏙᎲ eroded ᎤᏣᏘᎾ, ᎠᏛᎯᏍᏗᏍᎬ ᎤᎨᏓᎵᏴ-ᎠᎴ-ᏫᎪᏍᏓᏴ topography, ᎢᏧᎳᎭ ᎾᎯᏳᎢ ᎯᎠ uplift ᎨᏒᎢ ᎠᎩᏍᎬᎢ ᎾᎿᎢ. ᏔᎵ ᎢᏗᎦᎪᏘ ᎣᏓᎸ ᎠᎴ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎥᎵᏍᎦᏍᏙᏗᏍᎬ ᎾᎿ ᎯᎳᎪ ᎯᎠ ᏅᏯ reacts ᎯᎠ tectonic ᎠᏂᏌᏙᏯᏍᎩ – ᏍᏆᎳ ᎠᏍᏆᎵᏛ ᏙᏓᎸ ᎠᎴ ᎦᏇᏅᏗ ᏙᏓᎸ.
+
+ᎯᎠ compressional ᎠᏂᏌᏙᏯᏍᎩ ᎭᏫᎾᏗᏢ continental collisions ᎠᎾᏍᎬᏘ ᏂᎬᏂᏏᏍᎬ ᎯᎠ compressed ᎤᏔᏂᏗ ᎦᏙᎯ thicken, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎦᎸᎳᏗᏢ ᎦᏚᎢ ᎨᏒᎢ ᎤᏩᏌᏙᏴ upwards. ᎭᏫᎾᏗᏢ ᎠᏓᏅᏍᏗ ᎤᏘᏴᎯ ᎯᎠ ᏄᏓᎨᏒ, ᎤᏣᏘ ᎯᎠ compressed ᏅᏯ ᎨᏒᎢ ᎤᏩᏌᏙᏴ ''downwards'', ᎠᏛᎯᏍᏗᏍᎬ ᎠᏍᏛᎩ "ᎣᏓᎸ roots". ᏙᏓᎸ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎤᏙᏢᏒ downwards ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ upwards (ᎠᎪᏩᏛᏗ [[isostasy]]). ᏱᏂᎬᏛᎾ, ᎭᏫᎾᏗᏢ ᎢᎦᏛ continental collisions ᎢᎦᏛ ᏌᏊ ᎡᏆ ᎦᏙᎯ ᎠᎾᏍᎬᏘ ᏄᏦᏍᏛᎾᏊ ''ᎠᏓᎳᏍᏓᎡᏗ'' ᎢᎦᏛ ᎯᎠ ᏐᎢ, crumpling ᎭᏫᎾᏗᏢ ᎯᎠ ᏧᎵᎬᏩᎳᏅᎯ.
+
+ᎢᎦᏛ isolated ᏙᏓᎸ ᎨᏒᎩ ᎠᏛᎯᏍᏔᏅ ᎾᎥᎢ [[volcano]]es, ᎠᏠᏯᏍᏗᏍᎩ ᎤᎪᏗᏗ ᎬᎪᏩᏛᏘᏉ ᎤᏍᏗ [[island|ᎠᎽᏰᎵ]]Ꮎ ᎠᏙᏯᏅᎯᏗᏍᏗ ᎡᏆ ᏂᎦᏛᎢ ᎦᎸᎳᏗᏢ ᎯᎠ [[ocean|ᎠᎺᏉᎯ]] ᎠᏯᏖᏃᎯ.
+
+ᏍᏆᎳ ᎠᏍᏆᎵᏛ ᏙᏓᎸ ᎠᎴ ᎪᏢᏅᎯ ᎯᎳᎪ ᎢᏳ ᎡᏆ areas ᎠᎴ widely ᎤᏲᏨᎯ ᎦᎸᎳᏗᏢ ᎾᎥᎢ ᎢᏳᏅᎢᏌᏛ creating ᎡᏆ vertical displacements. ᎯᎠ uplifted ᏍᏆᎳ ᏗᏍᏆᎵᏛ ᎠᎴ ᏍᏆᎳ ᎠᏍᏆᎵᏛ ᏙᏓᎸ ᎠᎴ ''[[Horst (geology)|horst]]''. ᎯᎠ intervening  ᎤᏬᎭᏒᎩ ᏍᏆᎳ ᏗᏍᏆᎵᏛ ᎠᎴ termed ''[[graben]]'': ᎾᏍᎩ ᎯᎠ ᏰᎵᏇ ᎾᏍᏋ ᎤᏍᏗ ᎠᎴ ᎤᏙᏢᏒ ᎤᏁᏉᏨᎯ rift ᎤᎨᏓᎵᏴ systems. ᎪᎯ ᎤᏙᏢᏒ ᎦᏙᎯ ᏄᏍᏗᏓᏅ ᏰᎵᏇ ᎾᏍᏋ ᎠᎪᎲᎢ ᎭᏫᎾᏗᏢ [[East Africa|ᎧᎸᎬ Africa]], ᎯᎠ [[Vosges]], ᎯᎠ [[Basin and Range|ᎠᏟᏍᏙᏗ ᎠᎴ ᎠᏍᏓᏅᏅ]] province ᏭᏕᎵᎬᏗᏢ [[North America|ᎤᏴᏢ ᎠᎺᎵᎨ]] ᎠᎴ ᎯᎠ [[Rhine]] ᎤᎨᏓᎵᏴ.
+
+ᎭᏢᏃ ᏅᏯ ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎢᏳᏩᏂᏌᏛ ᎾᏍᎩ folds, ᎢᏳᏍᏗᏊ symmetrically ᎠᎴ asymmetrically. ᎯᎠ upfolds ᎠᎴ ''anticlines'' ᎠᎴ ᎯᎠ downfolds ᎠᎴ ''synclines''; ᎭᏫᎾᏗᏢ asymmetric folding ᎾᎿᎢ ᎠᎾᏍᎬᏘ ᎾᏍᎩ ᎾᏍᏇ ᎾᏍᏋ recumbent ᎠᎴ overturned folds. ᎯᎠ Jura ᏙᏓᎸ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ folding. ᎦᏬᎯᎸᏙᏗ ᎢᏳᏩiyuwakodi, erosion ᏰᎵᏇ ᎠᏲᎯᏍᏗ ᎬᏩᏚᏫᏛ inversion ᎠᏓᏍᏕᎸᏗ: ᎯᎠ ᏩᏂᎨᎢ upthrust ᏅᏯ ᎨᏒᎢ ᎤᏲᏨᎯ ᎤᏣᏘᎾ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ anticlines ᎠᎴ ᎤᏙᎯᏳᎯᏯ ᎡᎳᏗᎨ ᎬᎾᏬᏍᎬ ᎯᎠ tougher, ᎤᏟ ᎢᎦᎢ compressed ᏅᏯ ᎯᎠ synclines.
+
+== ᎾᎥᎢ definitions ==
+
+=== United ᎧᏃᎮᎭ ===
+
+[[File:WasatchMountainsSaltLakeCountyWestSide.jpg|thumb|center|500px|ᎯᎠ [[Wasatch Range|Wasatch ᎠᏍᏓᏅᏅ]] ᎤᎭ  vertical ᎤᎵᏌᎳᏙᏗ  ᎬᏩᏚᏫᏛ 8,000 ᏧᎾᎳᏏᏕᎾ (2,438 m) ᏂᏛᎴᏅᏓ ᎯᎠ [[Salt Lake Valley|ᎠᎹ ᎥᏓᎵ ᎤᎨᏓᎵᏴ]].]]
+
+ᎭᏫᎾᏗᏢ ᎯᎠ United ᎧᏃᎮᎭ, ᎣᏓᎸ ᎨᏒᎢ 1,000 ᏧᎾᎳᏏᏕᎾ (304.4 metres) ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎭᏫᎾᏗᏢ ᏂᎦᏛᎢ ᏂᏛᎴᏅᏓ ᎭᏫᏂ summit.  ᎦᏚᏏ ᎨᏒᎢ 500 (152.4 metres) 999 (304 metres) ᏧᎾᎳᏏᏕᎾ.  discernible ᎦᏚᏏ Ꮎ ᎨᏒᎢ ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 500 ᏧᎾᎳᏏᏕᎾ ᎦᎸᎳᏗ ᎨᏒᎢ knoll.  ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ knolls constitutes ᎦᏐᏆᎴᏍᎬ ᏂᎬᏅ.  ᏂᎬᏅ ᎨᏒᎢ ᏂᎦᎥᏊ ᎠᎦᏎᏍᏔᏅ ᎤᏩᎾᏕᏍᎩ ᎢᏳᏃ ᎾᏍᎩ ᎤᎭ Ꮭ significant prominences (e.g., "ᏗᎦᏚᏏ" ᎦᏲᎵᎨ ᎬᎾᏬᏍᎬ 20 ᏧᎾᎳᏏᏕᎾ ᎦᎸᎳᏗ, ᎤᏁᎳᎩ ᎾᏍᎩ ᎾᏍᏊ ᎯᎠ ᎠᏍᏓᏅᏅ ᏂᎦᏛᎢ varies ᎾᏍᎩᎾᎢ ᏂᎬᏅ ᎾᏍᏋ ᎠᎦᏎᏍᏔᏅ ᎤᏩᎾᏕᏍᎩ).{{citation needed}}
+
+=== United ᎠᏰᎵ ᎤᎾᏙᏢᏒ ===
+
+ᎭᏫᎾᏗᏢ [[England and Wales|England ᎠᎴ Wales]] ᎯᎠ [[Department for Environment, Food and Rural Affairs|ᏗᎦᎸᏫᏍᏓᏁᏗ ᎾᏍᎩᎾᎢ Environment, ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏍᏛ ᏕᎦᏅᏅ ᏂᏚᎾᏛᏁᎵᏙᎸ]] ᎤᎭ ᎧᏁᎢᏍᏔᏅᎯ "ᎣᏓᎸ" (ᏥᏄᏍᏗ [[mass noun|ᎦᏟᏌᏅ ᎤᎪᏗᏗ ᏚᏙᎥᎢ]]) ᏥᏄᏍᏗ ᏂᎦᏛ ᎦᏙᎯ ᎦᏬᎯᎸᏙᏗ 600 metres, ᎾᏍᎩᎾᎢ ᎯᎠ ᏂᏚᏰᎸᏛᎢ [[Countryside and Rights of Way Act 2000|ᏚᏳᎪᏛ  ᎡᏙᎲᎢ ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ]]. ᎪᎯ ᎨᏒᎢ ᎠᏍᏚᏗ metric equivalent 2,000 ᏧᎾᎳᏏᏕᎾ (609.6&nbsp;m). [http://www.defra.gov.uk/wildlife-countryside/consult/access/statut.htm] ᎯᎠ [[Land Reform (Scotland) Act 2003|ᎦᏙᎯ ᎠᏓᏅᏘᏐᏗ (Scotland) ᎢᏯᏛᏁᎯ 2003]] ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎾᏄᎪᎢᏍᏗ ᎠᏎᎯᏍᏗ ᎪᎯ ᎤᎾᏤᎵᏛ, ᎠᎴ ᎭᏫᎾᏗᏢ [[Scotland]] ᎯᎠ ᎠᎴᏂᏍᎬ "ᎣᏓᎸ" ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ subjective, ᎢᏳᏓᎵᎭ ᎠᎴᏂᏙᎲ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᏗᎦᏚᏏ exceeding 3,000 ᏧᎾᎳᏏᏕᎾ (914.4 m) listed ᏥᏄᏍᏗ [[Munro]], ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ ᎤᎪᏗᏗ ᎡᎳᏗᎨ ᏗᎦᏚᏏ ᎦᏙ ᎤᏍᏗ ᎠᎴ distinctive ᎠᎴ mountainous. ᎭᏫᎾᏗᏢ ᎯᎠ United ᎠᏰᎵ ᎤᎾᏙᏢᏒ ᎯᎠ ᎠᎴᏂᏍᎬ "ᎦᏚᏏ" ᎨᏒᎢ commonly ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏗᎦᏚᏏ ᎠᎴ ᏙᏓᎸ, regardless ᏂᎦᏛᎢ.
+
+== ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ ==
+* [[Gallery of mountains|ᎧᏅᏑᎸ  ᏙᏓᎸ]]
+* [[List of mountains|ᏙᎪᏩᎸ  ᏙᏓᎸ]]
+* [[List of highest mountains|ᏙᎪᏩᎸ  ᏩᎦᎸᎳᏗᏴ ᏙᏓᎸ]]
+* [[Latin names of mountains|Latin ᏚᎾᏙᎥ  ᏙᏓᎸ]]
+* [[Mountain range|ᎣᏓᎸ ᎠᏍᏓᏅᏅ]] ᎠᎴ [[list of mountain ranges|ᏙᎪᏩᎸ  ᎣᏓᎸ ranges]]
+* [[List of mountains on Venus|ᏙᎪᏩᎸ  ᏙᏓᎸ ᎾᎿ Venus]]
+* [[List of mountains on the Moon|ᏙᎪᏩᎸ  ᏙᏓᎸ ᎾᎿ ᎯᎠ ᏒᏃᏱ ᎡᎯ ᏅᏙ]]
+* [[List of mountains on Mars|ᏙᎪᏩᎸ  ᏙᏓᎸ ᎾᎿ Mars]]
+* [[Pyramidal peak|Pyramidal ᏫᎪᏍᏓᏴ]]
+* [[Rural|ᎠᏍᏛ ᏕᎦᏅᏅ]]
+* [[Mountaineering]]
+
+== External ᏗᏕᎬᏔᏛ ==
+
+* [http://www.ga.com.pl/tatry21.htm Pics from the Tatra Mountains - Poland]
+* [http://bivouac.com Canadian Mountain Encyclopedia] - exhaustive ᎠᏩᏛᏗ ᎤᏴᏢ ᏴᏩᏁᎬ peaks, ᎠᏠᏯᏍᏗᏍᎩ ᎯᎸᏍᎩ ᎢᏯᎦᏴᎵ unnamed ᎠᏂᏏᏴᏫᎭ.  ᎠᏠᏯᏍᏗ ᎯᎠ United ᎧᏃᎮᎭ ᎠᎴ Mexico ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᏥᏄᏍᏗ Canada.
+
+== ᏫᏓᏎᎸᎢ ==
+
+* Fraknoi, ., Morrison, D., & Wolff, . (2004). Voyages ᎯᎠ Planets. 3rd Ed. Belmont: Thomson ᏗᎪᏪᎵ/Cole.
+
+{{Wiktionary}}
+
+[[Category:Landforms]]
+[[Category:Mountains]]
+[[Category:Mountaineering]]
+[[Category:Geomorphology]]
+
+[[af:Berg]]
+[[an:Montanya]]
+[[ar:جبل]]
+[[arc:ܛܘܪܐ]]
+[[ast:Monte]]
+[[az:Dağ]]
+[[ba:Тау]]
+[[be-x-old:Гара]]
+[[bg:Планина]]
+[[bn:পর্বত]]
+[[bpy:মোন্টানহা]]
+[[br:Menez]]
+[[bs:Planina]]
+[[ca:Muntanya]]
+[[cs:Hora]]
+[[cv:Ту]]
+[[cy:Mynydd]]
+[[da:Bjerg]]
+[[de:Berg]]
+[[el:Βουνό]]
+[[eml:Muntâgna]]
+[[en:Mountain]]
+[[eo:Monto]]
+[[es:Montaña]]
+[[et:Mägi]]
+[[eu:Mendi]]
+[[fa:کوه]]
+[[fi:Vuori]]
+[[fr:Montagne]]
+[[fy:Berch]]
+[[ga:Sliabh]]
+[[gan:山]]
+[[gd:Beinn]]
+[[gl:Montaña]]
+[[glk:کو]]
+[[he:הר]]
+[[hi:पर्वत]]
+[[hr:Planine]]
+[[ht:Mòn]]
+[[hu:Hegy]]
+[[id:Gunung]]
+[[is:Fjall]]
+[[it:Montagna]]
+[[ja:山]]
+[[jbo:cmana]]
+[[jv:Gunung]]
+[[ka:მთა]]
+[[kn:ಪರ್ವತ]]
+[[ko:산]]
+[[la:Mons]]
+[[lb:Bierg]]
+[[lmo:Muntagna]]
+[[ln:Ngómbá]]
+[[lt:Kalnas]]
+[[lv:Kalns]]
+[[mg:Tendrombohitra]]
+[[mk:Планина]]
+[[ml:പർവ്വതം]]
+[[ms:Gunung]]
+[[nah:Tepētl]]
+[[nds:Barg]]
+[[ne:पहाड]]
+[[nl:Berg (aardrijkskunde)]]
+[[nn:Fjell]]
+[[no:Fjell]]
+[[nrm:Montangne]]
+[[nv:Dził]]
+[[oc:Montanha]]
+[[pl:Góra]]
+[[pt:Montanha]]
+[[qu:Urqu]]
+[[rm:Muntogna]]
+[[ro:Munte]]
+[[ru:Гора]]
+[[rw:Umusozi]]
+[[sah:Хайа]]
+[[scn:Muntagna]]
+[[sh:Planina]]
+[[simple:Mountain]]
+[[sk:Vrch (vyvýšenina)]]
+[[sl:Gora]]
+[[sq:Mali (gjeografi)]]
+[[sr:Планина]]
+[[su:Gunung]]
+[[sv:Berg]]
+[[sw:Mlima]]
+[[te:పర్వతం]]
+[[tg:Кӯҳ]]
+[[th:ภูเขา]]
+[[tk:Dag]]
+[[tr:Dağ]]
+[[uk:Гора]]
+[[ur:پہاڑ]]
+[[uz:Togʻ]]
+[[vi:Núi]]
+[[war:Bukid]]
+[[wo:Tangor]]
+[[wuu:山]]
+[[yi:באַרג]]
+[[zh:山]]
+[[zh-classical:山]]
+[[zh-yue:大山]]
+[[zu:Intaba]]
