The file [[:Image:Butterfly_Morpho_Anaxibia_(M)_KL.jpg]] has been replaced by [[:Image:Butterfly_Morpho_rhetenor_helea_(M)_KL.jpg]] by administrator [[:commons:User:Alno]]: ''[[commons:Commons:File renaming|File renamed]]: was incorrectly identified'

--- a/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
+++ b/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
@@ -181,7 +181,7 @@ Image:Langesmetalmarkbutterfly91.jpg|'''Lange's Metalmark'''.
 <gallery>
 Image:Xvisionxmonarch.jpg|[[Monarch Butterfly]],<br> '''The Monarch''',<br> ''Danaus plexippus'' <br>the most widely known<br> danaine butterfly.
 Image:Polyura_athamas.jpg|'''Common Nawab''',<br> ''[[Polyura athamas]]'',<br> a charaxine Nymphalid<br> from India.
-Image:Butterfly Morpho Anaxibia (M) KL.jpg|''[[Morpho rhetenor helena]]'' a morphiine from<br> South America.
+Image:Butterfly_Morpho_rhetenor_helea_(M)_KL.jpg|''[[Morpho rhetenor helena]]'' a morphiine from<br> South America.
 Image:Julia-heliconian-butterfly.jpg|Julia Heliconian, <br>''[[Dryas julia]]''.
 Image:butterfly_panama.jpg|[[Sara Longwing]],<br> ''Heliconius sara''<br> a heliconine nymphalid.
 Image:Glasswing butterfly Panama.jpg|[[Glasswing butterfly]], <br>''Greta oto''.
