*Empty MediaWiki Message*

--- a/ᏧᎾᎦ.mw
+++ b/ᏧᎾᎦ.mw
@@ -1,4 +1,4 @@
-[[Image:RainbowTrout.jpg|thumb|300px|ᎤᏅᎪᎳᏛ ᏧᎾᎦ (''Oncorhynchus mykiss'')]]
+[[Image:Trout.jpg|thumb|300px|ᎤᏅᎪᎳᏛ ᏧᎾᎦ (''Oncorhynchus mykiss'')]]
 [[Image:Biwa Trout(Lake Biwa-JP).jpg|thumb|300px|Biwa ᏧᎾᎦ (''Oncorhynchus masou subsp'')]]
 
 '''ᏧᎾᎦ''' ᎨᏒᎢ ᎯᎠ ᏧᏣᏔᏊ ᏚᏙᎥ ᎠᏓᏁᎸ ᏎᏍᏗ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] [[freshwater]] [[fish|ᎠᏣᏗ]] ᎤᎾᏙᏣᎵ ᎯᎠ [[salmon|ᏎᎼᏂ]] ᏏᏓᏁᎸᎯ, ''[[Salmonidae]]''. 
