*Empty MediaWiki Message*

--- a/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏣᎳᎩ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -203,6 +203,7 @@
 [[bar:Cherokee (Sproch)]]
 [[bg:Черокски език]]
 [[ca:Cherokee]]
+[[cs:Hlavní strana]]
 [[cy:Cherokee (iaith)]]
 [[de:Cherokee (Sprache)]]
 [[en:Cherokee language]]
