*Empty MediaWiki Message*

--- a/ᏳᎳᏛ.mw
+++ b/ᏳᎳᏛ.mw
@@ -1,14 +1,14 @@
 ᎡᎶᏆ is a [[ᎡᏆᎦᏙᎯ]] <!-- continent --> ᎤᏗᎵᎬᏱ of [[ᎠᏏᎠ]] and ᎤᏴᏢᎢ of [[ᎠᎱᎵᎧ]] <!-- Africa -->. 
 [[File:LocationEurope.png|thumb|250px|ᎡᎶᏆ]]
 * [[Russia]]
-* [[ᏳᎬᎳᎢᏅ]]
-* [[ᏇᎳᎷᏒ]]
-* [[ᎼᎸᏙᏩ]]
-* [[ᎶᎹᏂᏯ]]
-* [[ᏎᎸᏈᏯ]]
+* [[ᏳᎬᎳᎢᏅ]] (Yugvlainv)
+* [[ᏇᎳᎷᏒ]] (Quelalusv)
+* [[ᎼᎸᏙᏩ]] (Molvdoya)
+* [[ᎶᎹᏂᏯ]] (Lomaniya)
+* [[ᏎᎸᏈᏯ]] (Selvquiya)
 * [[Croatia]]
 * [[Slovenia]]
-* [[ᎠᎸᏇᏂᏯ]]
+* [[ᎠᎸᏇᏂᏯ]] (Sgiquelise)
 * [[ᎹᏎᏙᏂᏯ]]
 * [[ᏉᏍᏂᏯ]]
 * [[Andorra|Anvdola]]
@@ -106,7 +106,6 @@ See also: [[List of European countries with Native names]].
 [[fo:Evropa]]
 [[fr:Europe]]
 [[frp:Eropa]]
-[[frr:Euroopa]]
 [[fur:Europe]]
 [[fy:Jeropa]]
 [[ga:An Eoraip]]
