--- a/ᏍᏈᏍᏗ_ᏗᎾᎳᏍᎬᏍᎩ.mw
+++ b/ᏍᏈᏍᏗ_ᏗᎾᎳᏍᎬᏍᎩ.mw
@@ -66,6 +66,10 @@ Image:Easterntentcaterpillars.JPG|A pair of [[Eastern_tent_caterpillar|Eastern T
 Image:DSCF1084.JPG|Caterpillar
 Image:Saturnia_pavonia.JPG|Caterpillar of Saturnia pavonia (Emperor Moth)
 Image:Hyles-gallii-caterpillar.jpg|Bedstraw Hawkmoth larva (''Hyles gallii'')
+Image:Parasemia.plantaginis.caterpillar.jpg|''Parasemia plantaginis''
+Image:Calliteara pudibunda caterpillar.jpg|''Calliteara pudibunda'']]
+Image: Dryas julia caterpillar.JPG|''Dryas julia'']]
+Image: Sphinx_ligustri_03_(HS).jpg|''Sphinx ligustri'']]
 </gallery>
 
 [[Category:Lepidoptera]]
