--- a/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
+++ b/ᏫᎩᏇᏗᏯ:ᎾᎥ_ᏄᎾᏓᎸ_ᎾᎿᎢ.mw
@@ -352,6 +352,21 @@ Fine with me :) --[[User:Ooswesthoesbes|Ooswesthoesbes]] 08:42, 19 July 2010 (UT
 I started [[:en:Cherokee_Central_Schools]] in English. This subject is of local interest, and it has its own Cherokee name, [[ᏣᎳᎩ ᎫᎾᏕᎶᏆᏍᏗ ᏚᏓᏥᏍᎬᎢ]] - Would someone mind writing an article about this? Also the Cherokee caption of [[:File:Cherokee Central Schools.jpg]] on the Commons needs to be expanded to include all of the meaning of the English description. - Also [[:Cherokee, North Carolina]] needs an article written in Cherokee. Thank you [[User:WhisperToMe|WhisperToMe]] 15:59, 14 July 2010 (UTC)
 :I've done my best to help you. More I can't do :( --[[User:Ooswesthoesbes|Ooswesthoesbes]] 08:51, 19 July 2010 (UTC)
 
+==Fundraising 2010==
+Hello Wikimedians,
+
+As many of you are aware, we are now two months away from the Fundraiser for the Wikimedia Foundation, 2010.  We have lofty goals, and we can meet them and exceed them!
+
+The meta translators are already actively engaged in the annual drive to distribute our messages and we encourage you to do the same, but we would like to point everyone to the developments we've made in banner messages- from creation to commentary to the ones that will go live for test and for the drive itself in November.  It's one of our goals to make sure that all volunteers know that there is a place for them in the Fundraising drive.  We've started the setup on [http://meta.wikimedia.org/wiki/Fundraising_2010 meta] for both [http://meta.wikimedia.org/wiki/Fundraising_2010/Messages banner submission], [http://meta.wikimedia.org/wiki/Fundraising_2010/Banner_testing statistical analysis], and [http://meta.wikimedia.org/wiki/Fundraising_2010/Committee grouping volunteers together] that would like to find specific focus and work in that area.
+
+This year the Wikimedia Foundation is taking a proactive stance in reaching out to each and every Wikimedia project and volunteer to find innovation, collaboration, and collation of ideas from the community driven process.  The staff working on this is comprised of long-time Wikimedians with as much care and concern for the success of this drive as the volunteers, and we want you to actively participate and have a voice.
+
+Use the talk pages on meta, talk to your local communities, talk to others, talk to us.  Engagement is what we strive for, without each other we would never had made Wikimedia succeed.  Everyone is welcome to contact any of us on staff at any time with a timely response to follow.  We actively encourage focusing discussion on meta so we can all work together.
+
+Please translate this message into your language if you can and post it below.
+
+See you on the wiki!  [[User:Kpeterzell|Keegan, WMF Fundraiser 2010]] 05:56, 8 September 2010 (UTC)
+
 [[ang:Ƿicipǣdia:Þorpes Ƿiella]]
 [[cv:Broken/Канашлу]]
 [[en:Wikipedia:Community Portal]]
