--- a/ᏍᏈᏍᏗ_ᏗᎾᎳᏍᎬᏍᎩ.mw
+++ b/ᏍᏈᏍᏗ_ᏗᎾᎳᏍᎬᏍᎩ.mw
@@ -67,9 +67,9 @@ Image:DSCF1084.JPG|Caterpillar
 Image:Saturnia_pavonia.JPG|Caterpillar of Saturnia pavonia (Emperor Moth)
 Image:Hyles-gallii-caterpillar.jpg|Bedstraw Hawkmoth larva (''Hyles gallii'')
 Image:Parasemia.plantaginis.caterpillar.jpg|''Parasemia plantaginis''
-Image:Calliteara pudibunda caterpillar.jpg|''Calliteara pudibunda'']]
-Image: Dryas julia caterpillar.JPG|''Dryas julia'']]
-Image: Sphinx_ligustri_03_(HS).jpg|''Sphinx ligustri'']]
+Image:Calliteara pudibunda caterpillar.jpg|''Calliteara pudibunda''
+Image: Dryas julia caterpillar.JPG|''Dryas julia''
+Image: Sphinx_ligustri_03_(HS).jpg|''Sphinx ligustri''
 </gallery>
 
 [[Category:Lepidoptera]]
