--- a/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
+++ b/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
@@ -161,7 +161,7 @@ Image:Black and blue butterfly KL.jpg|'''[[Birdwing|Palawan Birdwing]]''',<br> '
 Image:FlutterbySmall.jpg|'''[[Cairns Birdwing]]''', <br> ''Ornithoptera priamus''.
 Image:Blue_mormon.jpg|'''Blue Mormon''',<br> ''[[Papilio polymnestor]]''.
 Image:Schwalbenschwanz papilio machaon.jpg |''Papilio machaon''
-Image:Papilio constantinus on flower.jpg|''Papilio constantinus'']
+Image:Papilio constantinus on flower.jpg|''Papilio constantinus''
 Image:Red Helen (Papilio helenus) at Samsing, Duars, WB W IMG 6219.jpg|''Papilio helenus ''
 </gallery>
 
