--- a/ᎠᏓᎦᏙᎯ_ᎠᏓᏅᏖᎵᏙᎲ.mw
+++ b/ᎠᏓᎦᏙᎯ_ᎠᏓᏅᏖᎵᏙᎲ.mw
@@ -1,1 +1,3 @@
-This is the best tree,its really good atbeing green and a tree and hard like wood.Tree. I love wood trees.
+[[File:Neltumeaereo.jpg|thumb|.]]
+
+[[en:Woodland management]]
