--- a/ᎠᏓᎦᏙᎯ_ᎠᏓᏅᏖᎵᏙᎲ.mw
+++ b/ᎠᏓᎦᏙᎯ_ᎠᏓᏅᏖᎵᏙᎲ.mw
@@ -1,3 +1,4 @@
-[[File:Amazonie deforestation.jpg|thumb|.]]
+[[File:Amazonie deforestation.jpg|thumb|ᎠᏓᎦᏙᎯ ᎠᏓᏅᏖᎵᏙᎲ.]]
+'''ᎠᏓᎦᏙᎯ ᎠᏓᏅᏖᎵᏙᎲ''' (a-da-ga-do-hi a-da-nv-te-li-do-hv)
 
 [[en:Woodland management]]
