*Empty MediaWiki Message*

--- a/ᎠᏓᎦᏙᎯ_ᎠᏓᏅᏖᎵᏙᎲ.mw
+++ b/ᎠᏓᎦᏙᎯ_ᎠᏓᏅᏖᎵᏙᎲ.mw
@@ -1,4 +1,4 @@
 [[File:Amazonie deforestation.jpg|thumb|ᎠᏓᎦᏙᎯ ᎠᏓᏅᏖᎵᏙᎲ.]]
 '''ᎠᏓᎦᏙᎯ ᎠᏓᏅᏖᎵᏙᎲ''' (a-da-ga-do-hi a-da-nv-te-li-do-hv)
 
-[[en:Woodland management]]
+[[en:Forest management]]
