--- a/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
+++ b/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
@@ -40,7 +40,8 @@ Butterflies ᎤᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏗᏟᎶᏍᏙᏗ Ꭰ
 <gallery>
 Image:Blue morpho butterfly.jpg||[[Blue Morpho|ᏌᎪᏂᎨ Morpho]], ᏏᏓᏁᎸᎯ Nymphalidae
 Image:Meadow Argus02.jpg|[[Meadow Argus|ᏂᎬᏅ ᎠᎪᏩᏛᏗ]],  ᏧᏣᏔᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ  Australia
-Image:Geitoneura klugii2.jpg|''[[Geitoneura klugii]]'']][[Image:Bolboretas Galicia.gif|thumb|right|Butterflies
+Image:Geitoneura klugii2.jpg|''[[Geitoneura klugii]]''
+Image:Bolboretas Galicia.gif|Butterflies
 </gallery>
 
 ᎾᎯᏳᏊ butterflies ᎠᎴ classified ᎭᏫᎾᏗᏢ ᏔᎵ superfamilies, [[Hesperioidea]], ᎤᏠᏯᏍᏛ ᎯᎠ 'ᎠᏜ' ᎠᎴ [[Papilionoidea]] ᎠᎴ 'ᎤᏙᎯᏳ butterflies'. ᎾᏍᎩ ᎯᎠ ᎠᎴ [[sister taxon|ᎤᎸ taxa]], ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᎯᎠ butterflies ᏂᎦᏛ ᎠᎴ ᏁᎵᏒ ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ ᎤᏙᎯᏳ [[clade]].  ᎢᎦᏛ ᎪᎯᏊ ᎢᏴ ᏥᎩ taxonomists ᎾᎿᎢ ᎠᏂ ᏂᎦᏛ ᎭᏫᎾᏗᏢ superfamily Papilionoidea, ᏧᏓᎴᎿᎢ ᎯᎠ ᎠᏜ ᏂᏛᎴᏅᏓ ᎯᎠ ᏐᎢ butterflies ᎾᎾᎢ ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᎤᏩᎾᏕᏍᎩ ᎾᏍᎩ ᎤᏩᏒ. ᎭᏫᎾᏗᏢ ᎪᎯ ᎢᏯhᏛᏁᎵᏓᏍᏗ,  Papilionoidea ᎤᎾᏠᏯᏍᏗ  ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ Hesperiiformes (ᎬᏙᏗ ᏌᏊ ᏏᏓᏁᎸᎯ ᎾᏍᎩ ᎤᏩᏒ, ᎯᎠ ᎠᏜ ᏏᏓᏁᎸᎯ [[Hesperiidae]]) ᎠᎴ ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ Papilioniformes (ᎬᏙᏗ ᎯᏍᎩ ᎯᎸᏍᎩ ᎢᏯᏓᏁᎸ).
