--- a/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
+++ b/ᎧᎹᎹ_(ᏨᏍᎪᏱ).mw
@@ -38,7 +38,7 @@ Butterflies ᎤᎭ ᏭᏪᏙᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏗᏟᎶᏍᏙᏗ Ꭰ
 
 ==ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ==
 <gallery>
-Image:Blue morpho butterfly.jpg||[[Blue Morpho|ᏌᎪᏂᎨ Morpho]], ᏏᏓᏁᎸᎯ Nymphalidae
+Image:Blue morpho butterfly.jpg|[[Blue Morpho|ᏌᎪᏂᎨ Morpho]], ᏏᏓᏁᎸᎯ Nymphalidae
 Image:Meadow Argus02.jpg|[[Meadow Argus|ᏂᎬᏅ ᎠᎪᏩᏛᏗ]],  ᏧᏣᏔᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ  Australia
 Image:Geitoneura klugii2.jpg|''[[Geitoneura klugii]]''
 Image:Bolboretas Galicia.gif|Butterflies
