--- a/ᏥᏯ.mw
+++ b/ᏥᏯ.mw
@@ -23,6 +23,12 @@
 
 ᎯᎠ [[aquatic]] (ᏱᏓᏟᎶᏍᏔᏅ [[ᎠᏜ]]) [[ᎠᎵᏍᏓᏴᏗ]] [[mammal|gantlai]]ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏥᏯ''' ᎤᏙᏢᏒ ᎢᎦᏛ ᎯᎠ ᎡᏆ ᎠᎴ ᏧᏓᎴᎿᎢ [[ᏏᏓᏁᎸᎯ]] [[Mustelidae]], ᎦᏙ ᎤᏍᏗ ᎾᏍᎩ ᎾᏍᏇ ᎠᏠᏯᏍᏗ [[ᏥᏍᎦᏥ ᏓᎶᏂ]], [[ᎤᏲᎢ]], [[ᎤᎫᎾ]], ᎠᎴ ᎠᏂᏐᎢ. ᎬᏙᏗ 13 [[ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎭᏫᎾᏗᏢ 7 [[genus|genera]], ᏥᏯ ᎤᎭ ᎾᎥᏂᎨᏍᏗ ᏗᏍᏆᎸᏙᏗ ᏗᏗᎦᎴᏴ.
 
+ᏥᏯ ᎠᏁᎰ ᏚᏪᏴ, ᏧᏍᏗ ᏚᏪᏴ, ᎠᎹᏱᏃ ᎤᎦᏄᎸᏒ, ᎤᎿᏅ ᎠᏂᏃᎯᎵᏙᎰ
+ᎠᏣᏗ, ᏧᎾᏍᏗ ᏍᎪᏱ, ᎢᏧᎳ ᎠᏁᎯ, ᏧᎾᏍᏗᏃ ᏗᎾᏓᏍᏛᏍᎩ.
+ᏗᎪᏍᏓᏱ ᏓᏂᎾᏙᎦ ᎤᏂᎩᏍᏗ ᎤᏂᏃᎵᏙᎸ. ᏥᏯ ᎡᎵᏊ ᏱᏓᎳᎬᏯ
+ᏦᎢ ᎠᎴ ᏅᎩ ᎢᏯᏔᏬᏍᏔᏅ, ᎩᎳ ᎠᎵᏌᎳᏗᏍᎪ ᎠᎹᏱ ᎿᏊ
+ᎤᎭᏬᎳᏕᏍᏗ ᎤᏃᎴᎢ.
+
 ᎩᎵᏏ-ᎦᏬᏂᏍᎩ ᎠᎾᏍᎬᏘ ᎬᏙᏗ ᎯᎠ [[collective noun|ᏗᏍᏆᎸᏙᏗ ᏚᏙᎥᎢ]] ''ᎠᏗᏟᏙᎯ'' ᏩᏎᏍᏗ ᎤᎾᏓᏟᏌᎲ ᏥᏯ ([[Google (verb)|Google ᎠᏯᏍᏗ]] ᏥᏄᏍᏗ 29 ᎠᎾᏍᎬᏘ 2006 ᏠᎨᏏ 63 ᏄᏍᏗᏓᏅ ᎯᎠ ᎯᎸᏍᎩ ᎢᎧᏁᏣ "ᎠᏗᏟᏙᎯ ᏥᏯ", ᎠᎴ ᎯᎠ [[Oxford English Dictionary|OED]] ᎾᏛᏁ ᎾᏍᎩ ᏂᎨᏒᎾ ᎦᎾᏄᎪᎢᏍᏗ ᎪᏪᎸ ᎪᎯ ᏓᎦᏘᎴᎬ).
 
 == ᏄᎵᏂᎬᎬ ᎨᎦᏓᏅᏖᏗ ==
