--- a/ᏢᏓᏥ.mw
+++ b/ᏢᏓᏥ.mw
@@ -1,3 +1,6 @@
+[[File:African-lion-closeup.jpg]]
+
+
 ᏢᏓᏥ ᎤᎾᏓᏡᎬ ᎠᏁᎰᎢ. ᎠᏂᏨᏯ ᎤᏅᏌ ᏍᏈᏍᏗ ᎦᏅᎯᏓ ᎤᏂᏂᏈᏡ
 ᎠᏂᏍᎪᎵ ᏗᏜ. ᎠᏂᎩᏌ ᎠᏂᏃᎯᎵᏙᎯ ᎨᏐ ᎤᎾᏓᏡᎬ. ᏓᎾᎵᏍᏕᎵᏍᎪ
 ᏓᏂᏃᎵᏙᎲ ᏧᏂᎶᏟᏗ ᏐᏈᎵ ᎠᎴ ᏧᎾᏓᎴᏅᏓ ᏐᏈᎵ ᎢᏳᏍᏗ ᎠᏫᏃ
