*Empty MediaWiki Message*

--- a/ᎩᎦᎨ_ᎤᏜᏩᏗ.mw
+++ b/ᎩᎦᎨ_ᎤᏜᏩᏗ.mw
@@ -1,3 +1,5 @@
+[[File:Gray-kangaroo.jpg]]
+
 ᎠᏂᎩᎦᎨ ᎤᎾᏜᏩᏗ ᎠᏁᎰ ᎡᎳᏗᏜ, ᎾᎥᏃ ᏚᎦᏚᏛᎢ. ᏳᎾᏕᎿ
 ᎠᏂᏓ ᎤᎾᏜᏩᏗ, ᏧᎾᏍᏗ ᎨᏐ, ᎡᎵᏊ ᎦᏅᎯᏓ ᎤᏁᎦ ᏚᏯ
 ᎨᏐᎢ. ᎩᎳᏊᏅᏴ ᎤᏥ ᎤᏜᏩᏛ ᏩᏴᎯᎰ, Ꮲ ᏧᏁᎳ ᏯᏅᏓ
