*Empty MediaWiki Message*

--- a/ᎠᏬᎭᎵ_ᎠᏬᏚᎯ_ᏧᎩᏓᏟ.mw
+++ b/ᎠᏬᎭᎵ_ᎠᏬᏚᎯ_ᏧᎩᏓᏟ.mw
@@ -2,3 +2,5 @@
 ᎠᏟᏫᏗᏍᎩ ᏓᎶᏂᎨᏍᏙᏗ ᎠᏬᎭᎵ. ᎤᎵᏍᏈᏗ ᎧᏴᏍᎪᏍᏓᏯ,
 ᏗᎪᏍᏓᏱᏃ ᏚᏑᎦᏢ ᏚᏍᏕᎵᏍᎪ ᎤᏒᎦᎵᏗ ᎠᎴ ᎤᎦᎭᎷᏱᏍᏗ
 ᎤᏂᏴᏓ.
+
+[[File:Screen shot 2010-09-13 at 1.45.14 PM.png]]
