*Empty MediaWiki Message*

--- a/ᎪᏩᎳ_ᏲᎾ.mw
+++ b/ᎪᏩᎳ_ᏲᎾ.mw
@@ -2,3 +2,5 @@
 ᏕᏡᎬ ᏚᎾᎩᎶᎢ, ᏓᏂᎩᏍᎬ ᏚᎵᏍᏚᏒᎢ. ᏧᏃᏰᏂ ᏳᏍᏗ ᏚᏙᏢᏐ
 ᏚᏩᏂᎦᏢ ᏧᏂᏂᏴᏗ. ᎠᏂᎪᏩᎳ ᏲᎾ ᎣᏍᏓ ᎨᏐ ᎤᏂᏩᏒᏍᏗ, ᎥᏍᎩᏅ
 ᎤᏂᏍᏕᎵᏍᎪ ᎤᎾᏕᎳᎰᎯᏍᏗ ᏫᎬᏩᏓᎯᏍᏗ ᏱᎩ ᏚᎵᏍᏚᏒᎢ.
+
+[[File:ᎪᏩᎳ ᏲᎾ.jpg]]
