*Empty MediaWiki Message*

--- a/ᏍᏏᏉᏯ.mw
+++ b/ᏍᏏᏉᏯ.mw
@@ -1,6 +1,32 @@
 [[File:Sequoyah.jpg|thumb|right|250px|SE-ᎥᏓᏓᎫᏴᎡᏗᏱ-YAH – [[ᎠᏓᏕᏲᎲᏍᎩ]] ᏂᏛᎴᏅᏓ ''ᎠᏴᏫᏯ ᎠᏂᎳᏍᏓᎸ'', McKinney ᎠᎴ ᎦᎳᏅᏛ, [[1856]]. ᎪᎯ ᎠᏓᏕᏲᎲᏍᎩ ᎨᏒᎢ ᏂᏛᎴᏅᏓ ᎯᎠ ᏗᏓᏟᎶᏍᏔᏅ ᎦᎶᏁᏛ ᎾᎥᎢ [[ᏣᎵ ᏥᏍᏆ ᎤᎬᏫᏳᎯ]] ᏂᏛᎴᏅᏓ ᎥᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ [[1828]].]]
 '''ᏏᏉᏯ''' (ᏍᏏᏉᏯ ''Ssiquaya'' ᎭᏫᎾᏗᏢ [[ᏣᎳᎩ]]) (c.[[1767]] - ᎫᏰᏉᏂ ᎠᎴ ᎦᎶᏂ [[1843]]), ᎤᎾᏅᏛ ᏥᏄᏍᏗ '''ᏣᏥ ᎢᏰᎵᏍᏗ''', '''ᎠᏓᏩᏛᎯᏙᎯ''' ᎠᎴ '''ᎠᎴᏂᏙᎲ''', ᏥᏄᏍᏛᎩ [[ᏣᎳᎩ]] ᎠᏕᎸ ᎤᏁᎬ ᎠᏥᏅᏏᏓᏍᏗ ᎦᎪ ᎪᎷᏩᏛᏗ ᎯᎠ [[ᏣᎳᎩ ᏗᎪᏪᎵ]], ᎯᎠ ᎢᏴ ᎠᏓᏠᎯᏍᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᏀᎾᎢ ᏀᎾ ᎯᎠ [[ᏙᎪᏩᎸ ᎪᎷᏩᏛᏗ ᎠᏃᏪᎵᏍᎬ ᎢᏯᏛᏁᎵᏓᏍᏗ]]. 
 
+ᎾᎥ ᏔᎾᏏ ᏛᏍᎩᏥ ᏙᏧᏙᎥ ᎦᏚᎲ, ᎤᎿ ᎨᏎ ᎤᎨᏓᎵᏴ ᏕᎨᎦᏨᏍᏔᏁ ᎠᏣᎳᎩ ᎤᎬᏩᏳᎯ
+ᎤᏪᏥ, ᏭᏖ, ᏃᏊᎴ ᏅᏕᏂᎵ ᎩᏍᏗ. ᏗᎦᏁᎦ ᏗᎦᎾᏕᎩ ᎨᏎ ᏅᏕᏂᎵ. ᏭᏕᏁ ᏏᏉᏯ ᎦᎵᏆᏍᎪ
+ᎦᎵᏆᏚ ᏑᏓᎵ ᎤᏕᏗᏴᏌᏗᏒᎢ.
+ᎠᏲᏟ ᏥᎨᏎ ᎤᏓᏂᏰ ᏔᎾᏏ ᎤᎾᎴᏅ ᎠᏂᏲᏁᎦ ᎠᏂᎷᎬᎢ. ᏣᏥᏱ ᏗᏝ ᏭᏓᏅᏎ ᏭᏕᎶᏆᎡ
+ᏧᎸᏫᏍᏓᏁᏗ ᎪᏢᏅᏍᎬ ᎠᏕᎳ ᎤᏁᎦ ᎢᎬᏗᏍᎬ. ᎠᏍᎦᏯ ᎤᏩᏎ ᎤᏬᏢᏅ, ᎠᏥᏁᏍᏓ ᏁᎴ
+ᏏᏉᏯ ᏚᏙᎥ ᎤᏬᏪᎶᏗ ᎤᏬᏢᏅᏅ ᎦᎾᏕᎬ. ᎤᏚᎸᎮ ᏚᏙᎥ ᎤᏬᏪᎶᏗ ᏏᏉᏯ. ᎠᏎᏃ Ꮭ ᏯᎦᏔᎮ
+ᎤᏬᏪᎶᏗ. ᎪᏟᎩ ᎨᏎ ᎤᏪᎿᎢ ᎠᏍᎦᏯ ᏗᎦᎶᎩᏍᎩ. ᏣᎵ ᏧᏙᎢᏓ ᎥᏍᎩᏃ ᎤᏎᎮᎴ ᏲᏁᎦ ᎢᎬᏗ
+ᏚᏙᎥ ᎤᏬᏪᎳᎾ. ᎾᎯᏳ, ᏁᎳᏚ-ᏐᏁᎳ ᎤᎴᏅᎮ ᎠᏓᏅᏕᏍᎬ ᏣᎳᎩ ᎪᏪᎶᏗ.
+ᎤᏓᏅᏒ ᎠᎳᏆᎹ ᏗᏝ ᏬᎶᏒᎢ. ᏭᏖᎳᏕ ᏣᎳᎩ ᎠᏂᏲᏍᎩ ᎠᎾᏟᎲ ᎤᎾᏙᏢᏒᎢ. ᎾᎯᏳ
+ᏓᎿᏩ ᎠᏍᏆᎵᏍᎬ ᎤᏕᎳᎰᏎ ᏂᎦᎥ ᎦᎷᎶᎬ ᏣᎳᎩ ᎪᏪᎶᏗ. ᎬᏩᎵᏨ ᎨᎡ ᏙᏧᏁᏅᏒ ᏗᎪᏪᎵ
+ᏧᏃᏪᎳᏅ ᏫᏚᏂᏅᏗ ᎠᎴ ᎤᏃᏪᎶᏗ ᏂᎦᎵᏍᏔᏅᏍᎬᎢ.
+ᏓᎿᏩ ᎤᎵᏍᏆᏙᎾ ᎤᎴᏅᎮ ᏙᏳ ᎨᏒ ᏚᎸᏫᏍᏓᏁᎲ ᏕᎪᏢᏍᎬ ᏣᎳᎩ ᏗᎪᏪᎶᏗ. ᎤᎴᏅᎮ
+ᏕᎪᏪᎵᏍᎬ ᏂᎦᎵᏍᏗᏍᎬ ᎦᏁᎬᎢ. ᏁᎵᏍᎪ ᏑᏓᎵ ᎢᏳᏓᎴᎩ ᎦᏁᏍᏗ ᏚᏬᏪᎳᏁᎢ. ᎤᏍᏗ ᎠᎨᏳᏣ
+ᎤᏪᏥ, ᎠᏲᎦ ᏧᏙᎢᏓ, ᎠᎯᏓ ᎤᏕᎶᏆᎡᎢ ᎤᏬᏪᎶᏗ ᏣᎳᎩ. ᎤᏎᎮᎴ ᏔᎵᏁ ᎠᎾᏟᏅᏢ, ᏣᏥ
+Lowery, ᏙᏱᏗᏝ ᏭᏎᎮᎴ ᎤᏪᏅᏍᏗ ᎠᏲᎦ, ᏅᏊ ᏅᏛᏛᏁᎢ ᎪᎰᏍᏗ ᏣᏥ. ᏏᏉᏯ ᎤᏬᏪᎳᏁ
+ᎤᏬᎭᎵᏴᏓ ᏅᏊᎴ ᎤᏛᏛᏁᎢ ᎠᏲᎦ ᎤᎪᎵᏰᏗᎢ. ᎤᏍᏗᏰᏔᏁ ᏣᏥ ᎠᏂᏐᎢ ᏴᏫ ᏧᏎᎮᏗ ᏂᎬᏁᎲ
+ᏕᎪᏪᎵᏍᎬᎢ. ᏁᎳᏚ ᏌᏊᏦᏁ, ᎤᎾᏠᏯᏍᏔᏁ ᏣᎳᎩ ᎠᏰᏟ ᎤᎾᏤᎵ ᎤᏅᏔᏁ ᏗᏣᎳᎩ
+ᏗᎪᏪᎶᏗ.
+ᏏᏉᏯ ᏃᏊᎴ ᎤᏓᏅᏎ ᏭᏕᎵᎬ ᏗᏝ, ᏲᏁᎬ ᏙᏧᏙᎥ ᏭᎶᏎᎢ. ᎠᎹᎭ ᎠᎹ ᎦᎶᏗᏍᎨ ᎤᏔᎾ
+ᏧᎳᏍᎩᎢ. ᏳᎧᏲᏌ ᎠᎹ ᎠᏘᏯᏍᎨ ᎠᎹ, ᏃᏊ ᏫᎦᎾᏕᎨᎢ. ᏁᎳᏚ ᏅᎩᏦᏁ ᎤᏕᏘᏴᏌᏗᏒ ᎢᏤ
+ᎢᏦᏓ ᎢᎬᎾᏕᎾ ᏗᏂᎳᏫᎩ ᎤᎾᏓᏡᎬ ᎤᏃᏢᏁ ᎤᏯᏟᏗ. ᎣᏂᏊᏳᏍᏗ ᎤᏅᎪᏤ ᏗᎦᎴᏔᏅ, ᏣᎳᎩ
+ᏧᎴᎯᏌᏅ, ᎤᎿ ᎥᏍᏊ ᎦᏚᎲ. ᏁᎳᏚ-ᏧᏁᎵᏦᏁ ᏣᎦᏟᎶᏍᏔᏅ ᎤᏂᏑᏫᏎ ᏩᏒᏓᏂ ᏩᏂᎦᏛ
+ᏧᏄᎦᏙᏗ ᎨᏥᎢᎸᏍᏗ ᏲᏁᎬ ᎤᎦᎳᎰᎹ ᏗᏝ.
+ᎠᏂᏍᏆᏂ ᏗᏁᎲ ᏗᏝ, ᎢᎦᏓ ᎠᏂᏣᎳᎩ ᎤᎿ ᏥᏭᏂᎶᏒ ᏓᏲᎲ ᎪᎱᏍᏗ ᏧᏩᏂ ᏭᏲᎱᏎ ᏁᎳᏚ
+ᏅᏍᎪ ᏦᎢ ᎤᏕᏗᏴᏌᏗᏒᎢ. Ꮭ ᎩᎶ ᏳᏅᏔ ᎤᎿᎢ ᎦᏂᏌᎲᎢ.
+
 == ᎤᏕᏅ ᎠᎴ ᎢᎬᏱ ᎥᎴᏂᏙᎲ ==
 ᎯᎠ ᏗᏙᎳᎩ ᏀᎾᎢ ᎠᎴ ᎢᏳ ᎢᎪᎯ ᏏᏉᏯ ᎤᏤᎵ ᎤᏕᏅ ᎤᎾᏅᏛ, ᎣᏂ ᏧᏩᎫᏛ Ꮭ ᎪᏪᎳᏅᎯ ᎪᏪᎸ ᎬᏂᎨᏒ ᏂᏚᏍᏗ. ᎠᏩᏒᏗᏱ ᎠᎴ ᏄᏍᏗᏓᏅ ᎾᎥᎢ ᎪᏪᎵᏍᎩ ᏀᎾᎢ ᎤᏤᎵ ᎤᏕᏅ ᎾᎾᎢ ᎢᎦᏛ ᎪᏍᏓᏱ ᎠᏰᎵ [[1760]] ᎠᎴ [[1776]]. ᏥᏄᏍᏗ ᎾᏍᎩᎾᎢ ᎤᏤᎵ ᏀᎾᎢ ᎤᏕᏅ, ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎤᎪᏗᏗ ᏄᏓᎷᎸᎾ ᏀᎾ ᎯᎸᏢ ᎭᏫᎾᏗᏢ ᎯᎠ [[ᎤᎦᎾᏭ Atlantic]] ᎠᎴ [[ᎤᎦᎾᏭ ᎠᏰᎵ]] ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ [[ᏌᏊᎭ ᎧᏃᎮᎭ]]. [[ᏧᏠᎯᏍᏗ Mooney]], ᏧᏓᏃᏣᎵ ᎠᎴ ᎪᏪᎵᏍᎩ ᎯᎠ ᏣᎳᎩ ᏴᏫ, ᎧᏁᎢᏍᏔᏅ ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎭᏫᎾᏗᏢ ᎧᏁᎬᎢ Ꮎ ᏏᏉᏯ ᎤᏂᏩᏒ ᎤᏤᎵ ᎢᎬᏱ ᏧᏕᏘᏴᏓ ᎬᏙᏗ ᎤᏤᎵ ᎤᏂᏥ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏍᏗ ᎦᏚᎲ [[Tuskegee]], ᏖᎾᏏ.
 
