*Empty MediaWiki Message*

--- a/ᏦᏍᎪᎯᏍᎩᏁ_ᎤᎬᏫᏳᎯ.mw
+++ b/ᏦᏍᎪᎯᏍᎩᏁ_ᎤᎬᏫᏳᎯ.mw
@@ -1,3 +1,16 @@
+[[File:Screen shot 2010-09-13 at 9.49.28 PM.pn]]
+
+
+ᏦᏍᎪᏅᎩᏁ ᎤᎬᏫᏳᎯ '''Dwight D. Eisenhower''' ᏚᏙᎡᎢ. ᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏐᏁᎵᏍᎪᎯᏁ
+ᎤᏕᏁᎢ. ᏍᎦᏚᎩᏃ ᎤᏕᏅ ᏅᏓᎩ ᎠᏃᏎᎰᎢ. Mamie Geneva Doud Eisenhower ᏚᏙᎡ
+ᎤᏓᏴᎲᏍᎩ. ᏑᏓᎵᏍᎪᏦᎢ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏔᎵ ᏳᏩᏗ ᎤᏓᏴᏎᎴᎢ
+ᎤᎬᏫᏳᎯ, ᏣᏁᎳ. ᏱᏧᏕᏘᏴᏓ. ᏐᏁᎳᏚᎢᏍᎪᎯᏍᏆ ᏑᏓᎵᏍᎪ ᏐᏁᎵᏁ ᎤᏲᏄᏎᎢ.
+Republican ᎨᏎᎢ. ᎤᏴᏜ.
+
+
+
+
+
 [[File:Screen shot 2010-09-13 at 9.29.37 PM.png]]
 
 
@@ -6,3 +19,82 @@
 ᎤᏍᏓᏴᎲᏍᎩ. ᎾᏍᎪᏅᎩ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ ᏝqᏭᎤ ᏅᎩ ᏱᏧᏕᏘᏴᏓ
 ᏳᏴᏞᎢ ᎠᏥᏲᎴ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏑᏓᎵᏍᎪᏦᎢᏁ ᎤᏲᎱᏎᎢ. Democrat ᎨᏎᎢ. ᎤᎦᎾᏩ.
 ᏩᏙᎨᎢ ᏴᏒ ᎤᎬᏫᏳᎯ ᎤᏲᎱᏒ.
+
+[[File:Screen shot 2010-09-13 at 9.31.39 PM.png]]
+
+
+ᏦᏍᎪᏑᏓᎵᏁ ᎤᎬᏫᏳᎯ Lyndon B. Johnson ᏚᏙᎡᎢ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏣᏁᎵᏁ
+ᎤᏕᏁᎢ. ᏍᎦᏚᎩᏃ ᎤᏕᏅ ᏅᏓᎩ ᎠᏃᏎᎰᎢ. Claudia Taylor Johnson ᏚᏙᎡ ᎤᏍᏓᏴᎲᏍᎩ.
+ᎯᎩᏍᎪᎯᏍᎩ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏑᏓᎵᏲᏧᏕᏘᏴᏓ ᎤᏓᏴᏎᎸ ᎤᎬᏫᏳᎯ.
+ᏐᏁᏓᏚᎢᏍᎪ ᎯᏍᏊ ᎦᎵᏆ ᏍᎪᏦᎢᏁ ᎤᏲᎱᏎᎢ. Democrat ᎨᏎᎢ. ᎤᎦᎾᏩ.
+
+[[File:Screen shot 2010-09-13 at 9.33.10 PM.png]]
+
+
+ᏦᏍᎪᎦᎵᏉᎩᏁ ᎤᎬᏫᏳᎯ '''Richard M. Nixon''' ᏚᏙᎡᎢ. ᏍᎦᏚᎩᏃ ᎤᏕᏅ ᎠᏕᎳᏧᏢᎢ
+ᎠᏃᏎᎰᎢ. Patricia Ryan Nixon ᏚᏙᎡ ᎤᏍᏓᏴᎲᏍᎩ. ᎯᎩᏍᎪᏑᏓᎵ ᏳᏕᏘᏴᏓ ᎨᏎᎢ
+ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ.ᎯᏍᎩᏱᏧᏕᏘᏴᏓ ᎤᏓᏴᏎᎴᎢ ᎤᎬᏫᏳᎯ. ᏧᏥᎶᏔᏂᏒ ᎤᎬᏫᏳᎨᏒ ᎤᏕᎳᎰᏎ
+ᎤᏩᎳ ᏚᏲᏎᎢ ᎤᎬᏫᏳᎨᏒᎢ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏐᏁᎳᏍᎪᏅᎩᏁ ᎤᏲᎱᏎᎢ. Republican
+ᎨᏎᎢ. ᎤᏴᏜ.
+
+[[File:Screen shot 2010-09-13 at 9.34.41 PM.png]]
+
+ᏦᏍᎪᏣᏁᎵᏁ ᎤᎬᏫᏳᎯ Gerald''' Ford ᏚᏙᎡᎢ'''. ᏍᎦᏚᎩ ᎤᏕᏅ ᏎᎷᏱ ᎠᏃᏎᎰᎢ. Elizabeth
+Bloomer Ford ᏚᏙᎡ ᎤᏍᏓᏴᎲᏍᎩ. ᏑᏓᎵᏍᎪ ᏌᏊ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ.
+ᏌᏊ ᏳᏩᏗ ᎤᏓᏴᏎᎴᎢ ᎤᎬᏫᏳᎯ, ᏅᎩ ᏱᏧᏕᏘᏴᏓ. ᏔᎵᏍᎪᎢ ᏍᎪᎯᏍᏊ ᏑᏓᎵᏁ ᎤᏲᎱᏎᎢ.
+Republican ᎨᏎᎢ. ᎤᏴᏜ.
+
+
+
+[[File:Screen shot 2010-09-13 at 9.37.06 PM.png]]
+
+ᏦᏍᎪᏐᏁᎵᏁ ᎤᎬᏫᏳᎯ '''Jimmy Carter''' ᏗᏓᎠ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆᏔᎵ ᏍᎪᏅᎩᏁ
+ᎤᏕᏁᎢ. ᏍᎦᏚᎩ ᎤᏕᏅ ᏣᏥᏱ ᎠᏃᏎᎰᎢ. Rosalynn Smith Carter ᏚᏙᎡ ᎤᏍᏓᏴᎲᏍᎩ.
+ᎯᎩᏍᎪᏦᎢ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏌᏊ ᏳᏩᏗ ᎤᏓᏴᏎᎴᎢ ᎤᎬᏫᏳᎯ, ᏅᎩ
+ᏱᏧᏕᏘᏴᏓ. ᎪᎯᏥᎨ ᏁᎵᏍᎪᎯᏍᎩ ᏳᏕᏘᏴᏓ. Democrat Ꮧ. ᎤᎦᎾᏩ.
+
+
+[[File:Screen shot 2010-09-13 at 9.40.21 PM.png]]
+
+ᎾᏍᎪᎯᏁ ᎤᎬᏫᏳᎯ '''Ronald Reagan''' ᏚᏙᎡᎢ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏌᏚᏏᏁ ᎤᏕᏁᎢ.
+ᏍᎦᏚᎩᏃ ᎤᏕᏅ ᎢᎵᏃᏱ ᎠᏃᏎᎰᎢ. Nancy Davis Reagan ᏚᏙᎡ ᎤᏍᏓᏴᎲᏍᎩ. ᎦᎵᏊᏍᎪ
+ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏔᎵ ᏳᏩᏗ ᎤᏓᏴᏎᎸ ᎤᎬᏫᏳᎯ, ᏣᏁᎳ ᏱᏧᏕᏘᏴᏓ. ᏔᎵ
+ᏍᎪᎢᏍᎪ ᎯᏍᏆ ᏅᎩᏁ ᎤᏲᎱᏎᎢ. Republican ᎨᏎᎢ. ᎤᏴᏜ.
+
+
+
+[[File:Screen shot 2010-09-13 at 9.42.10 PM.png]]
+
+
+ᎾᏍᎪᎠᎬᏱᏁ ᎤᎬᏫᏳᎯ '''George H.W. Bush''' ᏚᏙᎠ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏔᎵᏍᎪ ᏅᎨᏁ
+ᎤᏕᏁᎢ. ᏍᎦᏚᎩ ᎤᏕᏅ ᎺᏌᏧᏎᏗ ᎠᏃᏎᎰᎢ. Barbara Pierce bush ᏚᏙᎠ ᎤᏍᏓᏴᎲᏍᎩ.
+ᏑᏓᎵᏍᎪᎯᏍᎩ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏌᏊ ᏳᏩᏗ ᎤᏴᏞ ᎤᎬᏫᏳᎯ. ᎪᎯᏥᎩ
+ᏁᏍᎪᎯᏍᎩ ᏳᏕᏘᏴᏓ. Republican ᎨᏎᎢ. ᎤᏴᏜ.
+
+
+
+
+[[File:Screen shot 2010-09-13 at 9.43.40 PM.png]]
+
+ᎾᏍᎪᏔᎵ ᎤᎬᏫᏳᎯ '''Bill Clinton''' ᏚᏙᎠ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏑᏓᎵᏍᎪ ᏑᏓᎵᏁ ᎤᏕᏁᎢ.
+ᏍᎦᏚᎩ ᎤᏕᏅ ᏲᏁᎬ ᎠdᏃᏎᎰᎢ. Hillary Rodham Clinton ᏚᏙᎠ ᎤᏍᏓᏴᎲᏍᎩ. ᎾᏍᎪ
+ᎦᎵᏉᎩ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏔᎵ ᏳᏩᏗ ᎤᏴᏞ ᎤᎬᏫᏳᎯ, ᏣᏁᎳ ᏱᏧᏕᏘᏴᏓ.
+ᎪᎯᏥᎩ ᏑᎳᏗᏍᎪᏦᎢ ᏳᏕᏘᏴᏓ. Democrat Ꮧ. ᎤᎦᎾᏩ.
+
+
+
+[[File:Screen shot 2010-09-13 at 9.45.25 PM.png]]
+
+ᎾᏍᎪᏦᎢᏁ ᎤᎬᏫᏳᎯ '''George W. Bush''' ᏚᏙᎠ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᎾᏍᎪᏑᏓᎵᏁ
+ᎤᏕᏁᎢ. ᏍᎦᏚᎩ ᎤᏕᏅ ᎧᏁᏓᎦᏘ ᎠᏃᏎᎰᎢ. Laura Welch Bush ᏚᏙᎠ ᎤᏍᏓᏴᎲᏍᎩ.
+ᎯᎩᏍᎪᎯᏍᎩ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏔᎵ ᏳᏩᏗ ᎤᏓᏴᏎᎳ ᎤᎬᏫᏳᎯ, ᏣᏁᎳ
+ᏱᏧᏕᏘᏴᏓ. ᎪᎯᏥᎩ ᏑᏓᎵᏍᎪᏦᎢ ᏳᏕᏘᏴᏓ. Republican Ꮒ. ᎤᏴᏜ.
+
+
+
+[[File:Screen shot 2010-09-13 at 9.47.19 PM.png]]
+
+ᎾᏍᎪᏅᎩᏁ ᎤᎬᏫᏱᎯ '''Barack Obama''' ᏚᏙᎠ. ᏐᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏑᏓᎵᏍᎪ ᏌᏊᎯᏁ
+ᎤᏕᏁᎢ. ᏍᎦᏚᎩ ᎤᏕᏅ ᎭᏩᏱ ᎠᏃᏎᎰ. Michelle LaVaughn Robinson Obama ᏚᏙᎠ
+ᎤᏍᏓᏴᎲᏍᎩ. ᎾᏍᎪᏣᏁᎴ ᏳᏕᏘᏴᏓ ᎨᏎᎢ ᎤᎬᏫᏳ ᎤᏓᏴᏎᎳ. ᏏᏍᎩᎾ ᎤᎬᏫᏳᎯ ᎪᎯᏥᎩ.
+ᎠᏴᎤᎢ ᎠᎬᎾᎨ ᎤᎬᏫᏳᎯ ᎤᏴᏢᎯ. Democrat Ꮧ. ᎤᎦᎾᏩ.
