--- a/ᏦᏍᎪᎯᏍᎩᏁ_ᎤᎬᏫᏳᎯ.mw
+++ b/ᏦᏍᎪᎯᏍᎩᏁ_ᎤᎬᏫᏳᎯ.mw
@@ -1,4 +1,4 @@
-[[File:Screen shot 2010-09-13 at 9.49.28 PM.pn]]
+[[File:Screen shot 2010-09-13 at 9.49.28 PM.png]]
 
 
 ᏦᏍᎪᏅᎩᏁ ᎤᎬᏫᏳᎯ '''Dwight D. Eisenhower''' ᏚᏙᎡᎢ. ᏁᎳᏚ ᎢᏍᎪᎯᏍᏆ ᏐᏁᎵᏍᎪᎯᏁ
