*Empty MediaWiki Message*

--- a/ᎦᏙ_ᎠᎵᏖᎸᎮᏍᎬ.mw
+++ b/ᎦᏙ_ᎠᎵᏖᎸᎮᏍᎬ.mw
@@ -8,3 +8,6 @@
 ᎠᎵᏖᎸᎲᎢᏃ ᎡᎶᎯ ᎠᎹ ᏂᎦᎵᏍᏔᏅᏍᎬ ᎠᎹ ᎦᎶᏏᏙᎲ ᎠᏃᏎᎰᎢ. ᎯᎸᏍᎩ
 ᎢᏯᏔᎳᏗᏅᏓ ᏂᎦᎵᏍᏗᏍᎪ ᎠᏓᏅᏏᏙᎲ ᎠᎹ ᎠᎺᏉ ᏳᏂᎩᏌ, ᎦᏙᎯᏃ ᎿᏊᎴ
 ᎠᎺᏉᎯᏜ.
+
+
+[[File:Screen shot 2010-09-13 at 10.02.05 PM.png]]
