--- a/ᎡᏆ_ᏍᏆᏞᏍᏗ_ᎠᏥᎳ!.mw
+++ b/ᎡᏆ_ᏍᏆᏞᏍᏗ_ᎠᏥᎳ!.mw
@@ -1,3 +1,6 @@
+[[File:Screen shot 2010-09-13 at 10.41.45 PM.png]]
+
+
 ᏅᏓ ᎢᎦ ᎡᎯ ᎠᏝᏪᎢ ᏂᎫᏍᏙᎢ. ᎠᎦᎾᏬᏗᏍᎩ
 ᎢᎩᏁᎰᎢ. ᎢᎦ ᎢᎩᏁᎰᎢ. ᏗᎦᎪᏗ ᏓᏛᎯᏍᏗᏍᎪᎢ. Ꮭ
 ᎤᏃᏴᎬ ᏱᎦᏴᏛᎬᎠ. ᎠᏎᏅ, Ꮭ ᎡᏝᏪᎢ ᏱᎩ. ᏅᏓ ᎢᎦ
