--- a/ᎠᎦᏙᎲᏍᏗ.mw
+++ b/ᎠᎦᏙᎲᏍᏗ.mw
@@ -1,1 +1,494 @@
 <big>''ᎠᎦᏙᎲᏍᏗ''
+
+
+
+New Translated Cherokee Words
+
+Academics                  ᎦᎸᎳᏗᎨᏍᏗ ᎠᏕᎶᏆᏍᏗ
+Accountant                   ᎠᏕᎳ ᎤᎦᏎᏍᏗ
+Add				ᏩᏝᏅ
+Adding machine		ᏗᏎᏍᏗ ᏗᎦᏟᏏᏍᎩ
+Adjective			ᎧᏃᎮᏗᎩ		
+Africa			ᎬᎼᎨᏍᏛ
+Airport                    ᏥᏳ ᏧᏂᏗᏍᏗ
+Almanac	              ᏅᏓ ᎠᏕᎶᎰᎯᏍᏙᏗ
+Ammonia                  ᎠᎼᏂ
+Animate			ᎬᏃᏓ
+Antarctica		      ᏧᏁᏍᏓᎸ
+Antique Dealer          ᎤᏬᏗ ᎦᎾᏕᎦ
+Appraiser                 ᏗᎬᏩᎶᏗᏍᎩ
+Aquifers			ᎦᏙ ᎭᏫᎾ ᏕᎦᏁᎲ
+Arctic Ocean             ᏧᏴᏢ ᎠᎺᏉᎯ
+Armadillo			ᎤᏤᏍᏗ ᎤᏯᏍᎦᏟ
+Arrowhead                ᏓᏫᏍᎦᏗ ᎪᏍᏓᏱ
+Artist                     ᏗᏟᎶᏍᏔᏅᎲᏍᎩ
+Arts and Crafts		ᏧᏓᎴᏅᏗ ᎪᏢᏅ
+Arts and crafts	      ᏗᏟᎶᏍᏙᏗ ᏃᎴ ᎪᎱᏍᏗ ᎪᏢᏅᏅ
+Asia					       ᏓᎶᎾᎨᏍᏛ
+Associates                                                       ᎤᎾᎵᎪᏒ
+Asteroid                                                     ᏅᏯ ᏧᎳᎬᎳᎸᏓ
+Astronaut                                                       ᎦᎸᎶ ᏪᏙᎯ
+Astronomers                                              ᏃᏈᏏ ᏗᎾᏕᏎᏍᏗᏍᎩ
+Athletics                                                    ᏗᎾᏁᎶᎲᏍᎩ
+Atlantic Ocean		            ᏗᎧᎸᎬ ᎠᎺᏉᎯ
+Atmosphere                                                   ᎦᏃᎴᏍᎬ 
+Atom                                                               ᎠᏓᎻ
+Attributes					ᎤᏓᏙᏢᏒᎢ
+Australia				 ᏒᎳᏗᏝ
+Author			ᎤᏬᏪᎳᏅᎯ
+Auto Dealer               ᏙᏩᎴᎳ ᏗᎦᎾᏕᎦ
+Auto Repair               ᏙᏩᎴᎳ ᎣᏍᏓ ᎢᏗᎬᏂᏗ
+Auto Supplies             ᏙᏩᎴᎳ ᎢᎬᏓᏔᏂᏗᏍᏗ
+Award                      ᎠᏓᏒᏅ
+Axis				 ᎠᏰᏟ ᎠᏍᏓᏅᏅ
+Bacteria					ᎥᏳᎩ ᏗᏱᏙᎯ
+Bail Bond              ᏔᎵᏁ ᎠᏛᏙᏗ
+Bank                    ᎠᏕᎳ ᏗᎲᏗ
+Ball                    ᏍᏆᏞᏍᏗ
+Balloon					ᎤᏃᎴ ᎠᏲᏙᏗ
+Bannerstone					ᏄᎬᏫᏳᏒ ᏅᏯ
+Barber                 ᏗᎾᏓᏍᏙᏯᏗ
+Beak                   ᎧᏴᏍᎪᏍᏓᏯ
+Beauty Salon         ᏗᎾᏓᏙᏚᏍᏗᏍᎩ
+Big Dipper            ᎤᏔᎾ ᎠᎫᎩᏍᏙᏗ
+Binder                 ᏗᎪᏪᎵ ᏗᎪᏣᎸᏗ
+Biology		   ᎬᏃᏓ ᎠᎦᏎᏍᏙᏗ
+Blow Gun		   ᏚᏇᏍᏗ ᎠᏦᏔᏍᏙᏗ
+Bobcat                 ᎬᎮ
+Bones			  ᏧᎪᎳ
+Book Binder         ᏗᎪᏪᎳ ᏗᏗᏒᏙᏗ
+Book Cover		  ᎪᏪᎵ ᏗᏓᏢᏙᏗ
+Bored			  ᎤᎯᏐᏗ
+Bounce		  ᎠᏓᏕᎦ
+Branch (water)       ᎤᏕᏴᏗᎢ
+Brain Stem				 ᎤᎾᏂᏓ ᎤᏴᏗᏅᏒ
+Bubbles			ᏚᏆᎷᎲ
+Buildings			ᏓᏓᏁᎸᎢ
+Burp				ᎠᎩᎫᎵ
+Calcium		ᏧᎪᎳ ᏗᏝᏂᎪᎯᏍᏗᏍᎩ
+Calculator same as adding machine
+Calendar Months		ᏅᏓ ᏕᎧᎸ
+Calendar			ᏅᏓ ᏗᏎᏍᏗ
+Campground              ᏙᏗᏈᏙᎠᏚᏍᏗ
+Can opener			ᏔᎷᎩᏍᎩ ᎠᏍᏚᎢᏍᏙᏗ
+Candle			ᎤᎧᎿᏩ
+Capillaries		       ᏫᏚᏍᏗᎬ ᏧᏩᏚᏂ
+Car crash			ᏧᎾᏓᏛᏂᎳ
+Carrot                     ᎠᏓᎶᏂᎨ ᎠᏂᎳᏗᏍᎩ
+Car title			ᏗᎦᏚᎴᏂ ᎦᏂᏯᏙᏗ
+Carbon Dioxide 	      	ᎤᏃᎴ ᎬᏔᏅ	  in ᎠᏛᎸᏓ        
+Cardboard			ᎧᏁᏌ ᎪᏪᎵ
+Career services          ᏗᎦᎸᏫᏍᏓᏁᏗ ᎡᏤᏲᏗ
+                                                           
+Caterer                   ᎤᎾᏓᏍᏓᏴᎲᏍᎩ ᎠᏂᏲᎯᎯ
+Cat tails                   ᏢᏓᏥ ᎫᎦᏙᎦ
+Causes			ᏂᏕᎬᏂᏏᏍᎬ
+Cave				ᎤᏍᏓᎦᎸ
+CD                          ᏏᏗ
+CD player			ᏏᏗ ᏗᎧᏃᎩᏍᏙᏗ
+Cells				ᏗᏃᏢᏍᎩ
+Celsius			ᎠᏤ ᎠᏟᎶᎥ
+Cerebellum			ᎤᎾᏥᏓ ᎤᏐᎭᏛ	
+Cerebrum			ᎤᏅᏥᏓ ᎦᏚᎢᏗᏜ
+Chalk				ᎪᏍᏓ ᏗᎪᏪᎶᏙᏗ
+Chemical			ᏧᏓᎴᏅᏓ ᏧᎵᏍᏔᏅ
+Cherokee Legends	ᏄᎵᏍᏔᏂᏙᎸ
+Cherokee Phoenix       ᏣᎳᎩ ᏧᎴᎯᏌᏅ
+Childcare                 ᏗᏂᏲᏟ ᏧᎾᎦᏎᏙᏗ
+Chiropractor             ᏙᏫᏢᏗᎦᏣᎯᏙᏫᏢ ᎦᎾᎦᏘ
+Chocolate			ᎧᎨᏲ ᏚᏯ
+Church                     ᏧᏂᎳᏫᏍᏗ
+Claws                      ᏚᏑᎦᏢ
+Clipboard		        ᎪᏪᎵ ᏗᎦᏛᏙᏗ
+Clorox		        ᎤᏁᎦ ᎢᏗᎬᏁᎯ
+Closet		        ᎠᏍᏆᏂᎪᏔᏅᏗ
+Clothing store             ᏗᎿᏬ ᏧᏂᎾᏗᏅᏗ
+Clumsy			  ᎤᏅᏣᏘ
+Commerce                  ᎤᎪᏗᏗ ᎠᏓᎾᏅᏗ
+Commerce Group          ᎤᎪᏗᏗ ᎠᏓᎾᏅᏗ ᎤᎾᏓᏡᎬ
+Comet                        ᎠᏥᎳ ᏢᏓᏥ
+Committed			   ᏚᏳᎪᏛ ᎢᏯᏛᏁᏗ
+Communicate		   ᏗᏓᏛᎪᏙᏗ
+Community Services       ᎣᏪᏅᏒ ᏗᏃᏢᎯᏏᏍᎩ 
+Compare                    ᏗᎾᏟᎶᏍᏓ, ᎤᏠᏯ ᎢᎬᏁᏗ       
+Computer        ᎠᎦᏙᎲᏍᏗ ,	ᎥᎦᏔᎲ ᎠᏍᏆᏂᎪᏗᏍᎩ
+Computer Mouse           ᎠᏑᏰᏍᏙ ᎠᏕᎯ
+Computer Printer          ᎤᏩᏒ ᏗᎪᏪᎵᏍᎩ
+Computer Repair          ᎠᏍᏆᏂᎪᏛ ᎠᎾᏓᏗᏍᎩ ᎣᏍᏓ ᎢᏗᎬᏁᏗ
+Computer store            ᎠᏍᏆᏂᎪᏛ ᎠᎾᏓᏗᏍᎩ ᏧᏂᎾᏗᏅᏗ		
+
+Condenses			  ᎠᎦᏲᎶᏍᎬᎢ
+Constellation               ᏃᏈᏏ ᏚᎾᏓᏟᏕᏍᏗ
+Constitution Convention Commission      ᎦᎫᏍᏛᏗ ᏗᏂᎳᏫᎩ
+Construction paper	 ᏗᏑᏫᏓ ᎪᏪᎵ
+Contact list                                                     ᏓᏎᎯᎲ
+Continent(s)			                      ᎡᏆ(Ꮧ)ᎦᏙ	
+Convienience store				ᎠᎯᏗᎨᎢ ᏩᏩᎯᏍᏗᎢ ᎠᏓᎾᏅ
+Cooler						ᎠᏴᏜᏗᏍᏗᏍᎩ
+Copy Machine					ᎤᏠᏯ ᏗᏟᎶᏍᏗᏍᎩ
+Cork				 		ᎠᏍᏚᏙᏗ
+Corkboard, bulletin board			ᏗᎦᏃᏣᎸᏗ ᏗᎦᏯᎸᏗ
+Cornstalk Shoot				ᏎᎷ ᏧᏴᏗᏅᏓ ᏓᏂᏲᎯᎭ
+Cornstalk					ᏎᎷ ᏧᏴᏗᏅᏓ
+Counselor                                                        ᎠᏓᎵᏃᎮᏗᏍᎩ
+Country					ᎠᏰᏟ ᎤᏙᏢᏒᎢ
+                                                           
+Crayons					ᏗᏑᏫᏍᏙᏗ
+Creative					ᎪᏝᎾᏍᎩ
+Creek                                                                ᎤᏓᏰᏛᏗ, ᎤᏍᏗ ᎤᏪᏴ 
+Cringe			 	 		ᎠᏓᎾᏫᏍᏗ
+Cultural					ᏄᏍᏛ ᎠᏁᎲ
+Cultural Resource Center                                ᎠᏂᏣᎳᎩ ᎤᎾᏓᏁᎸ
+Culture						ᎢᏳᎾᏛᏁᎵᏓᏍᏗ
+Curriculum                                                      ᏗᏕᏲᏙᏗ
+Dart                                                             ᏥᏥ, ᏗᏲᏍᏗ                                                          
+Dentist                                                         ᏗᏓᏅᏕᏍᎩ
+Department Store                                        ᎤᏔᎾ ᎠᏓᎾᏅ
+Diaphran				           ᎤᎬᎴ ᎦᏌᏙᏴᏍᎩ
+Dice						ᎪᎳ ᏗᏆᎾᏲᏍᏙᏗ
+Dictionary					 ᏗᎧᏁᎢᏍᏗ ᎦᏛᎬᎢ
+Dimple                                                             ᎤᏆᏅᏪᎥ
+Directions					ᏔᏂᏚᏳᏛ, ᏫᏂᏚᏳᎪᏛ
+Disabled                                                          ᎡᎵ ᎢᎬᏩᏛᏗ ᏂᎨᏒᎾ, ᏗᏲᎤᎵ
+
+Divide			ᎢᎦᏓ,			ᎠᏯᏔᏍᏗ
+Dolphin					ᏗᏁᏍᏆᏕᎩ
+Drills                                                               ᏗᏔᎸᏍᏙᏗ
+Dry erase board				ᏗᎪᏪᎶᏗ
+Dunes                                                               ᏃᏯ ᏚᏐᎯᏢ
+Eagle Dance					ᎤᏬᎭᎵ ᎠᎵᏍᎩᏍᏗ
+Ear wax					ᎤᎵᏍᏆᏅᏛ	
+Eardrum			 	     ᏗᎦᎴᏂ ᏚᏒᏙᏅ
+Echo                                                          ᏚᎸᎭᏴᎦ
+Election                                                        ᏗᏙᎩᏯᏛ
+Electrician                                                  ᎠᎾᎦᎵᏍᎩ ᏧᎸᏫᏍᏗᏁᎯ
+Elliptical                                                      ᎦᏌᏆᎸ ᎢᎽᏍᏗ
+Employment agency                                     ᏗᎦᎸᏫᏍᏓᏁᏗ ᎠᎾᏓᏩᏛᏒ
+Encyclopedia                                               ᎪᏪᎵ ᎠᏕᏔᎿᎢ        
+Energy						ᎬᏂᎦᎵᏍᏗ
+Engineer                                                            ᎠᏥᎳ ᏗᎯᎴᎩ
+England					ᎠᎦᎵᏐᎢ
+English                                                             ᎠᏂᎩᎵᏏ
+Environment					ᎡᎶ ᏄᏍᏗᏓᏅ
+Equation					ᎢᏗᎦᏲᏍᏗ
+Equator                                                            ᎢᏯᏓᏗᏍᎩ
+Eraser                                                              ᎠᏍᎪᎸᏗᏍᎩ
+Erosion					ᎦᏓ ᎦᎶᏍᎬ
+Europe						ᏳᎳᏈ
+European                                                    ᏲᏁᎦ
+Executive                                                  ᏄᎬᏫᏳᏌᏕᎩ
+Exercise                                                     ᏙᎯ ᎢᏯᏓᏛᏗ
+Evaporates					ᎠᏔᏃᎴᎪᎢ
+Even numbers					ᏧᏠᏱᎭ
+Excited                                                               ᎤᎳᏅᎩᏍᎬ
+Explore                                                             ᎤᏍᏆᎾᎸᏯᏗᏕᎦ
+Extras                                                                ᎤᏤᎵᏛ
+Fahrenheit					ᎤᏪᏘ ᎠᏟᎶᎥ
+Farewell                                                            ᎬᏩᎦᏘ ᏛᎦᎴᏂᏍᎬ
+Farmer                                                              ᏗᎦᎶᎩᏍᎩ
+Farm Equipment                                           ᏗᏂᎶᎩᏍᎩ ᎤᏅᏔᏂᏓᏍᏗ
+Fax machine                                                 ᏗᏟᎶᏍᏔᏅ ᎠᏂᎩᏍᏗᏍᎩ
+Feces						ᏗᎦᏏ
+Feed store                                                       ᎦᎾᏝ ᏗᎨᎵᏍᏙᏗ ᎠᏓᎾᏅ
+Femur					     ᎦᎦᎶ ᎤᎪᎳ
+Files						ᏗᎦᏛᏙᏗ ᎪᏪᎵ ᏗᏍᏆᏂᎪᏙᏗ
+Fin                                                                    ᏚᏩᏓᎷᏯᏛ
+Fire alarm					 ᎠᏓᏪᎳᎩᏍᎬ ᎦᏃᏣᏢᏍᎩ
+Fire department                                               ᏗᏅᏝᏗᏍᎩ
+Fire in the woods				ᎦᎵᎬ
+Fire						ᎪᏔᎢ, ᎠᏥᎳ
+Flashcard                                                         
+Flashdrive
+Flea market                                                       ᎤᎾᏔᏅ ᏓᏓᎾᏅ
+Flexible					ᎠᏍᏆᏙᏏᏴᏍᎩ
+Flippers					ᏗᎦᎪᏪᏍᏙᏗ
+Florist                                                              ᎤᏂᏥᎸᏍᎩ ᏧᏂᎾᏗᏅᏗ
+Fluttering					ᎠᎵᏖᎸᎲᏍᎦ
+Foam						ᎤᏬᎩᏟ
+Food and customs				ᎠᎵᏍᏔᏴᏗ ᎠᎴ ᏄᏍᏓ ᎢᏯᏛᏁᏗ
+Food pyramid					ᎠᎵᏍᏓᏴᏗ ᏚᏓᏈᎬ
+Fossil                                                               ᎤᏪᏘ ᎤᎭᏓᏗᏨᎢ
+Fraction					ᎢᎦᏓᏊ
+French						ᎠᏂᎦᎸᏣ			
+Funeral Home                                                  ᏧᏂᏲᎱᏒ ᏧᏂᏅᏗ
+Furniture Store                                                  ᎦᎵᏦᏕ ᎠᏂᏗ ᎠᏓᎾᏅ
+Galaxy                                                             ᏃᏈᏏ ᎤᎾᏓᎷᎬ
+Game                                                                ᎠᏁᏦᏗ
+Gas station					ᎪᎢ ᏧᏂᏟᏍᏗᎢ
+Gas						ᏅᏔᏃᎸᏓ
+Gas						ᎤᏃᎴ ᎤᏔᏃᎸᏓ
+Geography					ᎠᏓᏕᏲᎲᏍᎩ ᎡᎶᎯ
+Geometry	ᏗᏎᏍᏗ ᏓᏍᏓᏅᏅ,		ᏂᏚᏍᏛ ᏗᏥᎶᏍᏗ
+Germs						ᎥᏳᎩ ᎠᏱᏙᎯ
+Gift shop                                                          ᎠᏓᏁᏗ ᎠᏓᎾᏅ
+Gills						ᏚᏩᏓᎷᏍᏳᏯᏛ
+Ginger                                                              ᏅᏱᎦᎳ ᏗᎾᏓᏁᏍᎩ ᎤᏔᎾ
+Gopher						ᏧᏬᏂ
+Gourd                                                               ᏩᏚᎩ
+Government                                                    ᎠᏰᎵ ᎤᏙᏢᏒ
+Graceful					ᎤᎾᏁᏟᏗ
+Grade						ᎦᏅᏅᎢ
+Green Corn					ᎢᏤ ᎠᏕᏘᏴᏍᎬ
+Grocery store					ᎠᎵᏍᏓᏰᏗ ᎠᏓᎾᏅ
+Hallway					ᎦᎵᏅᏛᎢ
+Hardware                                                         ᎳᎷᎩᏍᎩ ᎠᎦᎳᏅᏗ ᎠᏓᎾᏅ
+Health Services                                                 ᎠᏰᎸ ᏄᏍᏛ ᎤᎾᎦᏌᏴᏍᏗᏕᎩ
+Helium                                                        ᎦᏌᎧᎯᎨ ᎤᏃᎴ
+Herb						ᏅᏬᏗ ᎠᎴ ᎠᏑᏴᏗ
+Heritage        ᏧᎾᏓᎴᏅ,			ᎾᎾᏛᏁᎵᏙᎲ
+Hibernate                                                      ᎪᎳ ᎦᏢᏗᎢ
+Hi liter                                                              ᎤᏍᎪᏍᏗ ᎠᏍᏓᏅᎾᏙᏗ
+Historical figure				ᎧᏃᎮᏍᎩ ᏄᎵᏍᏔᏅ ᎤᏪᏘ
+Hog Fry					ᏏᏆ ᏗᏂᏰᏍᎬᎢ
+Holiday                                                       ᎤᎾᏕᏘᏱᏍᎬ
+Honeycomb					ᏩᏚᎵᏍᏏ ᎤᎾᏌᎥ
+Hooves                                                              ᏚᏑᎬ
+Hotel                                                                 ᏧᏂᏒᏍᏗ
+Human Services                                               ᏴᏫ ᏗᏂᏍᏕᎵᏍᎩ
+Husband                                                           ᎠᏓᏰᎯ
+Hydrogen                                                    ᏫᎦᏌᎧᎯᏴ ᎤᏃᎴ
+Hygiene					ᎠᏓᏓᏅᎦᎶᏗ
+Hysterical					ᎤᏦᎠᏎᏗᏍᎩ
+Ice cream					ᎤᏅᏗ ᎤᏁᏍᏓᎳᏛ
+Illustrator					ᏗᏟᎶᏍᏗᏍᎩ
+Immersion school				ᎠᏃᏭᏘᏍᏗ ᏗᏕᎶᏆᏍᏗ	
+Indian Ocean			            ᎠᏴᏫᏯ ᎠᎺᏉᎯ
+Infected                                                            ᎤᏴᏘᎸ
+Inference                                                          ᎠᏰᎸᏓ
+Insurance agent                        ᎫᏝᎢᎦᎾᎦᎩ ᏚᎾᏙᏢᏒ
+Intercom					ᎧᏅᏑᎳ ᏓᏍᏆᏚᎳ ᏗᏟᏃᎮᏙᏗ
+Investigator                                                      ᎤᎦᏛᏂᏙᎯ
+JAT Opinions                    ᏗᏄᎪᏗᏍᎩ ᏄᏁᎵᏏᏙᎸ
+Janitor                                                              ᏗᎦᏅᎦᎵᏍᎩ
+Jellyfish					ᏩᏂᎨ ᎠᏣᏗ
+Jewelry						ᏗᏯᏢᏗ
+Judicial(Court of Justice)		ᏗᏄᎪᏗᏍᎩ ᏄᏁᎵᏏᏙᎸᎢ, ᏗᎫᎪᏙᏗᏱ
+Jupiter						ᏧᏈᏓ
+Jury                                                                 ᎠᏂᏑᎵ
+Knot(tree)                                                        ᎤᏆᎸᏛ
+Laboratory                                                        ᏅᏬᏗ ᎠᏗ
+Land Title					ᎦᏙ ᎦᏂᏯᏙᏗ
+Laptop                                                               ᎠᏱᏓᏍᏗ ᎠᎦᏙᎲᏒ
+Laundry                                                           ᏧᎾᎩᏤᏍᏗ
+Law Enforcement				ᏗᎧᏅᏩᏛᏍᏗ ᎠᏂᏍᏙᏴᏍᎩ
+Lawyer                                                             ᏗᏘᏲᎯᎯ
+Leadership					ᏗᏓᏘᏁᎦ
+Legislative				 	ᏗᎧᏅᏩᏛᏍᏗ ᏗᏃᏢᏍᎩ ᏗᏂᎳᏫᎩ
+Light bulb					ᎠᏣᏍᏙᏗ ᎠᎧᏅᏙᏗ
+Light						ᎢᎦᎢ ᎤᏘᏍᏓ
+Liquid						ᎦᏁᎯ
+Little Dipper                                                    ᎤᏍᏗ ᎠᎫᎩᏍᏙᏗ
+Loan Company                                               ᎠᏕᎳ ᏗᎾᏓᏙᎳᏘᏍᎩ
+Long						ᎦᏅᎩᏓ
+Lovestruck					ᎠᏓᎨᎿᏗ ᎤᏩᏂᎸᎢ
+Lumber                                                            ᏧᏯᏖᎾ
+Lungs						ᎠᏛᎵᏍᏙᏗ
+Magic                                                                ᎤᏕᎵᏛ ᎠᏛᏁᎸᏗ
+Magnet					 ᏔᎷᎩᏍᎩ ᏗᎦᏂᏱᏍᎩ ᎦᏯᎸᏗ 
+Mammals                                                          ᏗᎾᏓᏍᏛᏍᎩ
+Manatees					ᎠᎹᏱ ᎡᎯ ᎧᎹᎹ
+Marker                                                             ᏗᏍᏓᏅᎾᏙᏗ
+Married                                                        ᏗᎨᎦᏨᏍᏛᏅ
+Mars						ᎹᏏ
+Matter						ᎢᏳᏍᏗᏣᎳᏊ
+Mattress                                                           ᎠᏤᏍᏙ
+Mercury					ᎹᏗᎵ
+Meteor                                                         ᏃᏈᏏ ᎤᏬᎰᏒ
+Meteoroid                                                     ᎠᏥᎳ ᎦᏙᎦ
+Methane                                                       ᎺᏕᏂ
+Microscope					ᎾᎥᏂᎨ ᎠᎪᎵᏒᏙᏗ
+Microwave oven				ᎤᏟᏍᏓ ᎬᏂᏍᏙᏗ
+Migrate                                            ᏗᏓᏅᏏᏓᏍᏗ, ᎠᏓᏅᏍᏗᏱ
+Mineral					ᎦᏙ ᏂᏚᏳᏓᎴᏅ
+Mink                                                                ᏒᏟ
+Mischievious					ᏧᎦᎸᏓ
+Mission					ᎪᎱᏍᏗ ᎠᏛᎾᏗ
+Modem                                                            ᎠᏍᏆᏂᎪᏛ ᎢᎦᏪᏍᏗ
+Mold                                                                 ᎤᎿᏉᏓᏛ
+Molecule					ᏧᏓᎴᏅᏓ ᏗᎵᏙᏢᏅ
+Molting					ᏓᎾᏚᏯᎩᏍᎪ
+Monuments					ᏅᏯ ᏕᎨᏛᎢ
+Moss						ᎣᎷᎩ, ᏲᎾ ᎤᏤᏍᏙ
+Motel                                                               ᏧᏂᏒᏍᏗ
+Motor						ᎤᏂᎩᏍᏗᏍᎩ	
+Mountain Lion                                                 ᏢᏓᏥ
+Multiplication					ᎠᏴᎦᎴᏫᏒᎯ
+Multiply					ᎢᏳᏩᎦᏗ
+Muscle					      ᏧᏈᏓᏟ
+Music store                                             ᏗᎧᏃᎩᏍᏙᏗ ᎠᏓᎾᏅ
+Mythological                                                   ᎤᏍᏆᏂᏗ ᎧᏃᎮᏢᏅ
+Nail Salon                                                    ᏚᎾᏑᎦᏢ ᎣᏍᏓ ᎢᏗᏅᏁᎯ
+Nebula                                                             ᏚᎸᏌᏛ ᎤᎶᎩᎸ
+Neptune			            ᏧᏁᎵᏁ ᎡᎶᎯ
+Nerve Cells				 ᎠᎾᎦᎵᏗᏍᎩ ᏗᏃᏢᏍᎩ
+Nerve					ᎠᎾᎦᎵᏗᏍᎩ	
+Nervous System		 	 ᎠᎾᎦᎵᏗᏍᎩ ᎤᏙᏢᏒ
+Newspaper                                           ᎪᏪᎵ ᎦᎴᏯᏔᏅ
+North America		       ᏧᏴᏢ ᎠᎹᏰᏟ	
+Northern Hemisphere                                      ᏧᏴᏢ ᎠᏰᏟ
+Nouns						ᏗᎪᏍᏙᏗ
+Nursery(Plant)                                           ᏗᎦᎪᏗ ᏧᏅᏛᎯᏍᏙᏗ
+Observatory                                                  ᏫᏓᏕᏎᏍᏙᏗ
+Ocean					     ᎠᎺᏉᎯ
+Octopus					ᎠᏓᏢᎢ
+Odd numbers					ᏧᏓᎴᎿᎢ
+Oklahoma                                                        ᎣᎦᎵᎰᎻ
+Orion                                                               ᎦᏃᎭᎵᏙᎯ
+Ounce						ᎣᏂᏏ
+Ounces						ᎢᏯᎣᏂᏏ
+Pacific Ocean			           ᏭᏕᎵᏴ ᎠᎺᏉᎯ
+Panther					ᎬᎮ ᎬᎾᎨ
+Paper clip					ᎪᏪᎵ ᏗᎦᏂᏴᏙᏗ
+Parks						ᏴᏫ ᏧᏁᏓᏍᏗᎢ
+Pawn Shop                                                        ᎠᎦᏘᏗᏍᏙᏗ
+Paws                                                                ᏧᏬᏯ
+Parrot                                                                ᏬᏯ ᏓᎶᏂ
+Peanut butter                                                    ᏚᏯ ᎠᏂᎳᏗᏍᎩ ᎪᏢᏅ
+Peg Board					ᏗᎫᏍᏙᏍᏗ ᎠᏯᏖᎾ
+Permanent Marker                                           ᎬᏩᎦᏘ ᎠᏍᏗᏅᏃᏗ
+Petted						ᎠᏍᎪᎵᏰᏗ
+Pharmacist                                                  ᏅᏬᏗ ᎦᎾᏕᎩ ᎠᏓᎾᏅ   
+
+Pharmacy                                                         ᏅᏬᏘ ᎠᎾᎥ
+Photographer                                                    ᏗᏓᏟᎶᏍᏗᏍᎩ
+Pizza						ᎠᏍᏘᏝᏅ ᎦᏚ
+Places and events				ᏚᏙᏢᏒᎢ ᎠᎴ ᏂᏕᎦᎵᏍᏗᎲ	
+Planets						ᏤᎶᎯ
+Plasma					           ᎩᎦ ᎤᎸᏌᏓ
+Plastic						ᏍᏓᎪᎢ
+Platelets				      ᎩᎦ ᏗᏧᎵᏙ
+Plumber                    ᎠᎹ ᏧᏪᏓᏍᏗ ᎣᏍᏓ ᎢᏗᎬᏁᎯ
+Pluto				            ᏐᏁᎵᏁ ᎡᎶᎯ 
+Poison                                                              ᎠᏓᎯᎯ
+Police Department                                      ᏗᎾᏓᏂᏱᏍᎩ ᎤᏂᏴᏍᏗ
+Police Officer                                              ᏗᏓᏂᏱᏍᎩ
+Post Office                                                   ᎪᏪᎵ  ᏧᏂᏍᏚᎢᏍᏗ
+Principle people				ᎠᏂᏴᏫᏯ
+Printer                                                              ᏗᎦᎴᏴᏗᏍᎩ
+Profession and Work				ᏄᎬᏫᏳᏒ ᎠᎴ ᏗᎦᎸᏫᏍᏓᏁᏗ
+Prosthetic limbs, 				ᎠᏓᏩᏂᎦᎵᏙᏗ
+Purple						ᏗᏕᎭᎷᎨ
+Rapid                                                           ᎤᏌᏄᎵ
+Rasp or metal file				ᎠᏥᎳ ᎤᏓᏍᎦᏘ
+Rattles						ᎦᏃᏴᎵᏍᏙᏗ
+Real estate					ᎦᏙ ᎣᏤᎵᎪ
+Realtor                       ᎦᎵᏦᏕ ᏗᎦᎾᏕᎦ
+Reformation                 ᎤᎾᏙᏢᎯᏐᏗᎢ
+Regard                       ᎾᏍᎩ ᎣᏏ ᎠᏰᎸᏗ
+Registration                ᏗᏁᎲᎢ ᏗᎪᎯᎯ
+Reindeer				     ᏧᎾᏔᏔᎾᎶ
+Respectful					ᎠᏂᏐ ᏧᏬᎯᏳ
+Ridge                        ᎤᏪᎳᎢ
+River                         ᎡᏉᏂ
+Robot						ᏔᎷᎩᏍᎩ ᏴᏫ
+
+Ruler						ᎠᏟᎶᏍᏙᏗ
+Rules, law					ᏗᎧᎾᏩᏛᏍᏙᏗ
+Sacred Pipe					ᎦᎾᏃᏫ
+Sailboat                       ᎤᏃᎴ ᎤᏂᎩᏍᏗᏍᎩ ᏥᏳ
+Satellite-Moons                                            ᎦᎸᎶ ᏗᎾᏕᏯᎵᏙᎯ
+Saturn						ᏌᏓᏂ
+Scanner                       ᏗᏟᎶᏍᏗᎩ ᏩᏍᏆᏂᎪᏗᏍᎩ
+Scapula				      ᎦᏅᏬ ᎪᎳ
+Screwdriver					ᎦᏗᎦᎸᏪᏍᏙᏗ  ᎠᏍᏓᏱᏗᏍᏙᏗ
+Screws                                                             ᎤᏗᏆᎸᏕᏯᏓ
+Sea Lion					ᎠᎺᏉ ᏢᏓᏥ
+sea otter					ᏥᏯ
+Seasons 					ᏓᏓᏁᏟᏯᏎᎦ
+Sediment	ᎠᎼ ᎤᏓᏟᏌᏅ, ᎤᎸᏑᏒ, ᎤᎸᏑᎲ
+                             settled Bottom and unsettled top
+Self						ᎠᏇᏌ
+Self-confident					ᎤᏓᏙᎯᏳᎯ
+Sequoyah						ᏏᏉᏯ
+Shark						ᏗᎧᏳᎦ
+Shed						ᎠᏚᏩᏂᎩᏍᏗ
+Shellfish			  	      ᎠᏣᏗ ᎤᏯᏍᎦᏟ
+Shopping mall					ᏧᏔᎾ ᏚᎾᏓᎾᏅ
+Shrew                                                               ᏝᏁᏫ
+Sinuses				      ᏚᎦᏔᏅᏪᎥ
+Sleigh                                                               ᏗᏓᏅᏏᏁᎩ
+Slime                                                           ᏩᏥᎳᎨ
+Smock						ᎠᏛᏗᏍᏗ
+Smoke alarm					 ᏚᎦᏒᏍᏛ ᎦᏃᏣᏢᏍᎩ
+Solar System               ᏅᏓ ᎠᎴ ᏚᏓᏕᏫᏍᏛ
+Solid						ᎤᏍᏓᏲᏒ
+Solids				 		ᏗᏍᏓᏱ
+South America		            ᏧᎦᎾᏮ ᎠᎹᏰᏟ
+Sparrow                                                          ᏥᏍᏆᏯ
+
+Species				     ᏧᎾᏓᎴᎿ ᎠᏁᎯ
+Spirit                                                              ᎠᏓᏅᏙ
+Sponge					ᏓᏬᎵ ᎢᏳᏍᏗ
+Stapler						ᎪᏪᎵ ᏗᎧᏁᏍᏙᏗ
+Staples						ᏗᎧᏁᏍᏗ
+Starter						ᎠᏂᎩᏍᏗᏍᎩ	
+State						ᏍᎦᏚᎩ
+Steep			 			 ᎤᏁᏟᏍᏗ, ᎢᎾ ᎧᎾᎷᏍᎩ
+Stellar Universe                                           ᎦᎸᎶᎯ
+Stencil						ᎠᏍᏓᏩᏛᏍᏙᏗ
+Stomp Dance					ᎦᏘᏯ ᎠᎵᏍᎩᏍᏗ
+Stonehenge                                                       ᏅᏯ ᏙᏗᎦᏙᎬ
+Styrofoam					ᏍᏓᎪᎢ ᎢᏳᏍᏗ
+Subtract					ᎪᏣᎴᏛ
+Sumac                      ᎧᎶᏆ ᎠᎴ ᎦᎶᏆ
+Superstitious              ᎤᏬᎯᏳᏌᏗ
+Surfboard                ᏯᏖᎾ ᎠᎹᏱ ᎠᎩᎸᏙᏗ
+Tag agency              ᎠᏦᏙᏗ ᎦᏛᏗ  ᏧᏂᎾᏗᏅᏗ
+Tape						ᎦᏯᎸᏙᏗ
+Taste buds			 	      ᏗᎾᏢᏙᏗ
+Tax commission                                              ᎠᏰᎵ ᎠᎫᏴᏗ
+Taxi						ᏴᏫ ᎤᎾᏦᏙᏗ
+Teamwork                        ᏗᎵᎪᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ
+Telescope					ᎾᎥᏂᎨ ᎢᎬᏁᎯ
+Television                                             
+Tendons				      ᏧᏩᏚᎾ
+Textile						ᎠᎿᏬ ᎪᏢᏔᎾ
+Thermometer					ᎠᏟᎶᏍᏙᏗ
+Thesaurus                ᏗᎧᏁᎢᏍᏗ ᏗᎪᎷᏩᏘᏍᎩ
+Thistle                                ᎩᎩ
+Tibia					      ᎠᏍᎬᏓᎨᏂ
+Ticket                 ᎦᏣᏄᎵ ᎥᏴᎵᏒ ᎪᏪᎵ  
+Time						ᎠᏟᏓᏒ
+Timid                 ᎤᏓᏍᎦᏍᏗ
+Title						ᎧᏃᎮᏗ ᏚᏙᎥᎢ
+Toothbrush					ᏛᎦᎾᏙᎬ ᏗᎦᏅᎦᎸᏙᏗ
+Topic, issue, subject, theme			ᎢᏳᏍᏗ ᎧᏃᎮᏗ
+Tourist						ᎠᎦᏖᏃᎵᏙᎯ
+Tractor						ᏗᎦᏓᎷᎪᏙᏗ
+Traditions					ᏂᏧᎾᏛᏁᎸᏍᏔᏅ
+Transfer                                                            ᎠᎲᏍᏗ
+Transportation					ᎤᏅᏛᏁᎸ ᏧᏂᎶᏒᏔ
+Travel						ᎡᏙᎵᏓᏍᏗ
+Tribal tags                 ᎠᏂᏴᏫᏯ ᏓᏆᎴᎵ ᏗᎦᏛᏗ 
+Trophy                                                         ᎠᏓᏒᏅ
+Universe                                                       ᎦᎸᎶᎯ ᎦᎸᎾᏗ
+Uranus				            ᎦᎵᏉᎩᏁ ᎡᎶᎯ
+Urine						ᎠᏗᎧᏓ
+Utilitarian					ᏴᏫ ᎤᏅᏔᏂᏓᏍᏙᏗ
+Venus						ᎠᎾᏥᏍᏓᏂᎵ
+Verbs						ᎾᏛᏁᎲ
+Vessels					ᎩᎦ ᎤᏪᏓᏍᏗ
+Veterinarian                                                     ᎦᎾᏝ ᏗᎦᎾᎦᏗ            
+Viewer						ᎠᎦᎪᏍᏗᏍᎩ
+Vinegar					ᏧᏂᏦᏯᏍᏙᏗ
+Vision						ᏩᎪᏩᏛᏗ
+Water Cycle					ᎠᎹ ᎠᏓᏁᏟᏴᏎᎬ
+Water Vapor					ᎧᏄᏲᎳᏘᏍᎬ
+Wax						ᎤᏍᏓᎪᏴᏒ
+Weasel                       ᏥᏍᏕᏥ ᏓᎶᏂ
+Weather			ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ
+Weaver			ᎠᎿᏬ ᎬᏍᎩ
+Whale 						ᏓᏆ
+Whirlpool                    ᏃᏈᏏ ᎠᎾᏗᏆᎸᏕᏲᎲ
+Whirlwind		  			ᎠᎦᎷᎦ
+Whisper                                                            ᎠᏙᏅᏓ
+White out                                                    ᎤᏁᎦ ᎫᏢᎥᏍᎩ
+Wife                                                             ᎤᏓᎵ
+Wild chives					ᏒᎩ ᎢᏳᏍᏗ
+Willow                        ᏗᎳᎦᎵᏍᎩ
+Wing     ᎪᏯᏛ,      Wings   ᏕᎪᏯᏛ    
+Wipes						ᏗᏓᏅᎦᎸᏙᏗ
+Wish						ᏲᎯᏊ, ᏲᏎ
+Word						ᎧᏁᎢᏍᏗ
+Wrist                       ᎠᎵᏰᏑᏜᏗᏍᏗᎢ
+Youth Council	       ᎩᎳ ᏗᎾᏛᏍᎩ ᏗᏂᎳᏫᎩ
