--- a/ᏣᏩᏂᏏ.mw
+++ b/ᏣᏩᏂᏏ.mw
@@ -16,6 +16,7 @@
 }}
 ᏂᎰᏂ ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎠᏏᎠ|ᎠᏏᏲᎢ]]. ᏣᏆᏂ ᎠᎵᏍᏓᏴᏗ: [[ᏑᏏ]].
 
+[[Image:Japan_satellite_20100915_two_witnesses.png|250px|right]]
 
 {{Stub}}
 
