*Empty MediaWiki Message*

--- a/ᏓᎾᎵᏍᏓᏴᎲᏍᎬ.mw
+++ b/ᏓᎾᎵᏍᏓᏴᎲᏍᎬ.mw
@@ -2,6 +2,8 @@
 |-
 |[[File:HakoneFestival0028.jpg|thumb|[[ᏣᏆᏂ]] ᏓᎾᎵᏍᏓᏴᎲᏍᎬ]]
 |[[File:Renfair entertainers.jpg|thumb|[[Renaissance festival|ᏅᎪᏢᎯᏐᏗᏱ ᏓᎾᎵᏍᏓᏴᎲᏍᎬ]]]]
+[[File:2010 06 13 arne mueseler 0680.jpg|thumb|200px|right|]]
+
 |}
 '''ᏓᎾᎵᏍᏓᏴᎲᏍᎬ''' ᎠᎴ '''fest''' ᎨᏒᎢ ᏂᎦᎵᏍᏔᏂᏙᎲ, ᎤᏠᏱᎭ staged ᎾᎥᎢ ᎾᎥᎢ ᎾᎥ ᏄᎾᏓᎸ, ᎦᏙ ᎤᏍᏗ ᎠᏰᎵ ᎾᎿ ᎢᎦᏛ ᎢᏳᏍᏗ ᎧᏃᎮᏗ, ᏱᏓᏟᎶᏍᏔᏅ ᎾᎿ ᎢᎦᏛ ᏧᏓᎴᎿᎢ ᎤᏔᏂᏗ ᎦᏙᎯ ᎯᎠ ᎾᎥ ᏄᎾᏓᎸ. 
 
