*Empty MediaWiki Message*

--- a/ᏣᎳᎩ_ᏧᎴᎯᏌᏅᎯ.mw
+++ b/ᏣᎳᎩ_ᏧᎴᎯᏌᏅᎯ.mw
@@ -1,5 +1,5 @@
 [[Image:NewEchota.jpg|300px|right]]
-ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ, ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ ᎪᏪᎵᏗᎦᎴᏴᏔᏅ.
+ᏣᎳᎩ ᏧᎴᎯᏌᏅᎯ, ᎪᏪᎵ ᎦᎴᏯᏔᏅ ᎾᎿᎢ ᏣᎳᎩ ᎦᏬᏂᎯᏍᏗ.
 
 [[de:Cherokee Phoenix]]
 [[en:Cherokee Phoenix]]
