*Empty MediaWiki Message*

--- a/ᏣᏩᏂᏏ.mw
+++ b/ᏣᏩᏂᏏ.mw
@@ -15,7 +15,7 @@
 | ᎠᏕᎳ = ᏱᏅ
 }}
 ᏂᎰᏂ ᏙᏱᏗᏢ ᎦᏚᎲ ᎧᎸᎬᎢᏗᏢ [[ᎠᏏᎠ|ᎠᏏᏲᎢ]]. ᏣᏆᏂ ᎠᎵᏍᏓᏴᏗ: [[ᏑᏏ]].
-
+[[File:346334h355h335h.jpg|right|thumb|300px|Japan]]
 
 {{Stub}}
 
