--- a/ᏍᏏᏉᏯ.mw
+++ b/ᏍᏏᏉᏯ.mw
@@ -68,8 +68,8 @@ Lowery, ᏙᏱᏗᏝ ᏭᏎᎮᎴ ᎤᏪᏅᏍᏗ ᎠᏲᎦ, ᏅᏊ ᏅᏛᏛᏁ
 * [http://www.cherokee.org/home.aspx?section=culture&culture=dldisplay&ID=NJ1eYu1xTrA= The Official Cherokee Font (not Unicode-compatible)]
 
 [[Category:1767 births]]
-[[Category:1843 deaths]]
-[[Category:Cherokee people]]
+[[Category:1843 ᏗᏲᎱᎯᏍᏗ]]
+[[Category:ᎠᏂᏆᏣᎳᎩ]]
 [[Category:People with disabilities]]
 [[Category:Inventors of writing systems]]
 [[Category:Chronicles of Oklahoma citations]]
