--- a/ᏍᏏᏉᏯ.mw
+++ b/ᏍᏏᏉᏯ.mw
@@ -69,7 +69,7 @@ Lowery, ᏙᏱᏗᏝ ᏭᏎᎮᎴ ᎤᏪᏅᏍᏗ ᎠᏲᎦ, ᏅᏊ ᏅᏛᏛᏁ
 
 [[Category:1767 births]]
 [[Category:1843 ᏗᏲᎱᎯᏍᏗ]]
-[[Category:ᎠᏂᏆᏣᎳᎩ]]
+[[Category:ᎠᏂᏣᎳᎩ]]
 [[Category:People with disabilities]]
 [[Category:Inventors of writing systems]]
 [[Category:Chronicles of Oklahoma citations]]
