+ᏗᎦᎾᏣᎵ ᎠᏁᎳ, +ᏫᏓᏎᏄᎢ, ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ, +cats

--- a/ᎠᏂᏬᏗ_ᏧᏂᏴᏫ.mw
+++ b/ᎠᏂᏬᏗ_ᏧᏂᏴᏫ.mw
@@ -1,6 +1,16 @@
 [[File:Screen shot 2010-09-13 at 8.26.50 PM.png]]
 
-
-
 '''ᎠᏂᏬᏗ ᏧᏂᏴᏫ''' - ᎩᎦᎨᎢ ᎠᏑᏫᏍᏗ ᎠᏃᏢᏍᎩ ᎨᏎᎢ.
 ᎠᏂᎦᏔᎿ ᏃᏊᎴ ᏗᎾᏓᏅᏫᏍᎩ ᎨᏎᎢ.
+
+==ᏗᎦᎾᏣᎵ ᎠᏁᎳ==
+*[[ᏍᏏᏉᏯ]]<ref>[http://tourism.cherokee.org/sequoyah.aspx "ᏍᏏᏉᏯ."] ''ᏣᎳᎦᎯ ᎠᏰᎵ.'' (24 ᎫᎵᏍᏗ 2010)</ref>
+
+==ᏫᏓᏎᏄᎢ==
+<references/>
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+*[http://www.cherokee.org/Culture/30/Page/default.aspx ᏣᎳᎩ ᏧᏂᏴᏫ: ᎠᏂᏬᏗ], ᏣᎳᎦᎯ ᎠᏰᎵ
+
+[[Category:ᏣᎳᎩ]]
+[[Category:ᏧᏂᏴᏫ]]
