--- a/ᎠᏂᎪᏓᎨᏫ_ᏧᏂᏴᏫ.mw
+++ b/ᎠᏂᎪᏓᎨᏫ_ᏧᏂᏴᏫ.mw
@@ -1,6 +1,8 @@
 [[File:Screen shot 2010-09-13 at 8.22.37 PM.png]]
 
-
 '''ᎠᏂᎪᏓᎨᏫ ᏧᏂᏴᏫ''' - ᎦᏙ ᎠᏂᎦᏘᏱ ᎨᎪᎵᏍᏙᏗ ᏃᏊᎴ
 ᎠᏂᏟᏏᏍᎩ ᎨᏎᎢ. ᎢᎾᎨ ᎡᎯ ᏄᎾ ᎤᎾᎵᏍᎦᏍᏕᎢ
 ᎪᎯᎩ ᏥᎨᏒ ᎠᏂᎦᏴᎵ ᏣᏁᎲ ᏣᎳᎩ ᎤᏪᏘ.
+
+[[Category:ᏣᎳᎩ]]
+[[Category:ᏧᏂᏴᏫ]]
