--- a/ᎠᏂᏥᏍᏆ_ᏧᏂᏴᏫ.mw
+++ b/ᎠᏂᏥᏍᏆ_ᏧᏂᏴᏫ.mw
@@ -1,7 +1,9 @@
 [[File:Screen shot 2010-09-13 at 8.24.53 PM.png]]
 
-
 '''ᎠᏂᏥᏍᏆ ᏧᏂᏴᏫ''' - ᏥᏍᏆ ᏗᏂᎦᏘᏱ ᎨᏎᎢ. ᎪᎱᏍᏗ
 ᎧᏃᎮᏍᎩ ᎡᎶᎯ ᏃᏊᎴ ᎦᎸᎶᎯ ᏂᎬᎾᏛ ᎠᏂᎯᏙᎯ
 ᎨᏎᎢ. ᎯᎢᎾ ᏧᏂᏴᏫ ᎤᏅᏌ ᎨᎦᏑᏰᏓ ᎨᏎ ᏗᏂᏟᏏᏍᎩ
 ᎠᏬᎭᎵ ᏧᎩᏓᏟ.
+
+[[Category:ᏣᎳᎩ]]
+[[Category:ᏧᏂᏴᏫ]]
