--- a/ᎠᏂᎧᏫ_ᏧᏂᏴᏫ.mw
+++ b/ᎠᏂᎧᏫ_ᏧᏂᏴᏫ.mw
@@ -1,6 +1,8 @@
 [[File:Screen shot 2010-09-13 at 8.23.35 PM.png]]
 
-
 '''ᎠᏂᎧᏫ ᏧᏂᏴᏫ''' - ᎠᎭᏫ ᏗᏂᎦᏘᏱ ᎨᏎᎢ. ᎠᏂᏄᎳ
 ᏗᎾᏓᏟᏙ ᏃᏊᎴ ᎠᎭᏫ ᎠᏂᏃᎯᎵᏙᎯ ᎨᎪᎵᏍᏙᏗ
 ᎨᏎᎢ. ᎠᏂᏃᎮᏢᏍᎩ ᎠᏂᎯᏙᎯ ᎥᏍᏊ ᎨᏎᎢ.
+
+[[Category:ᏣᎳᎩ]]
+[[Category:ᏧᏂᏴᏫ]]
