--- a/ᎠᏂᏌᎰᏂ_ᏧᏂᏴᏫ.mw
+++ b/ᎠᏂᏌᎰᏂ_ᏧᏂᏴᏫ.mw
@@ -1,5 +1,6 @@
-'''ᎠᏂᏌᎰᏂ ᏧᏂᏴᏫ''' - ᏢᏓᏥ, ᎬᎮ, ᏃᏊᎴ ᏲᎾ ᎭᏫᎾᏗᏜ
-ᏚᎾᏙᏢᏎᎢ. ᏗᏂᏲᏟ ᎤᎾᎵᏍᏕᎵᏙᏗ ᏅᏬᏘ ᎠᏃᏢᏍᎩ
-ᎨᏎᎢ.
-
 [[File:Screen shot 2010-09-13 at 8.12.58 PM.png]]
+
+'''ᎠᏂᏌᎰᏂ ᏧᏂᏴᏫ''' - ᏢᏓᏥ, ᎬᎮ, ᏃᏊᎴ ᏲᎾ ᎭᏫᎾᏗᏜ ᏚᎾᏙᏢᏎᎢ. ᏗᏂᏲᏟ ᎤᎾᎵᏍᏕᎵᏙᏗ ᏅᏬᏘ ᎠᏃᏢᏍᎩ ᎨᏎᎢ.
+
+[[Category:ᏣᎳᎩ]]
+[[Category:ᏧᏂᏴᏫ]]
