--- a/ᎹᏱᎩᎵ_(ᎤᎬᏫᏳᎯ_ᏗᎧᎿᏩᏗᏙᎯ).mw
+++ b/ᎹᏱᎩᎵ_(ᎤᎬᏫᏳᎯ_ᏗᎧᎿᏩᏗᏙᎯ).mw
@@ -1,8 +1,10 @@
-'''ᎹᎩ''''' ᎤᎬᏫᏳᎯ ᎠᏂᏓᏪᎯ''
+'''ᎹᎩ''' ᎤᎬᏫᏳᎯ ᎠᏂᏓᏪᎯ.
 
 [[File:Simon Ushakov Archangel Mikhail and Devil.JPG|ᎹᎩ|thumb|right]]
 [[File:Neunkirchen-am-Brand-Grabrelief-Kloster.jpeg|200px]]
 {{stub}}
+
+[[Category:ᏧᎾᏁᏄᏗ ᏗᏁᎸᏙᏗ]]
 
 [[am:ሚካኤል]]
 [[an:Sant Miguel Arcánchel]]
