--- a/ᏪᏌ.mw
+++ b/ᏪᏌ.mw
@@ -369,8 +369,7 @@ Allergies ᏪᏌ [[dander|ᎤᏔᎳᏬᏍᎬ]] ᎠᎴ ᏌᏊ ᎯᎠ ᎤᎪᏗᏗ
 
 {{featured article}}
 
-[[Category:Animals kept as pets]]
-[[Category:Cats| ]]
+[[Category:Animalia]]
 
 {{Link FA|de}}
 {{Link FA|fr}}
