--- a/ᎠᎦᎷᎦ.mw
+++ b/ᎠᎦᎷᎦ.mw
@@ -315,7 +315,7 @@ Tornadoes ᎭᏫᎾᏗᏢ [[Dream interpretation|ᏗᏍᎩᏘᏍᏗ]] ᎠᎴ Ᏹ
 == ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ ==
 {{commons|Tornado}}
 
-;ᏂᎦᎥ
+===ᏂᎦᎥ===
 * [http://www.stormreportmap.com/# Real Time Reports overlaid on Google Maps.]
 * [http://www.spc.noaa.gov/climo/torn/monthlytornstats.html US Tornadoes, Year to date reports.]
 * [http://www.nssl.noaa.gov/researchitems/tornadoes.shtml Tornado research and education] ([[National Severe Storms Laboratory|ᎬᎾᏕᎾ ᎤᎶᏒᏍᏔᏅᎯ ᎦᏃᎸᏍᎩ ᎠᎦᏍᎩ ᏅᏬᏘ ᎠᏗ]])
@@ -330,13 +330,14 @@ Tornadoes ᎭᏫᎾᏗᏢ [[Dream interpretation|ᏗᏍᎩᏘᏍᏗ]] ᎠᎴ Ᏹ
 * [http://www.srh.weather.gov/srh/jetstream/mesoscale/tornado.htm NWS Jet Stream Online Weather School]
 * [http://www.msnbc.com/modules/tornado/default.asp Birth of a Tornado] ~ ᎥᎴᏂᏙᎲ ᏂᏛᎴᏅᏓ MSNBC Interactive
 * [http://www.tornadoarchive.com Tornado Newspaper Articles Archive] ᎠᏎᏊᎢ ᎪᏪᎸ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ 50,000 ᎪᏪᎵ ᎦᎴᏴᏔᏅ ᏚᏓᏡᎬ ᏄᏍᏗᏓᏅᎢ tornadoes ᏗᎬᏩᎶᏒ atsinuqowisgv ᎧᏃᎮᏍᎩ.
-;ᎾᏍᎩᏯᎢ
+;
+===ᎾᏍᎩᏯᎢ===
 * [http://www.spc.noaa.gov/faq/tornado/torscans.htm Tornado images] ([[Public Domain|ᏴᏫ ᎤᏁᏓᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]])
 * [http://www.photolib.noaa.gov/nssl/index.html National Severe Storms Laboratory Photo Album]
 * [http://www.photolib.noaa.gov/historic/nws/index.html National Weather Service Historical Image Collection]
 * [http://www.nssl.noaa.gov/swat/Cases/990503/case.html]
 
-;ᏄᎾᏰᎯᏍᏛᎾ ᎠᎴ ᎠᏛᏅᎢᏍᏔᏅ
+===ᏄᎾᏰᎯᏍᏛᎾ ᎠᎴ ᎠᏛᏅᎢᏍᏔᏅ===
 * [http://www.nssl.noaa.gov/NWSTornado/ NOAA Tornado Preparedness Guide]
 * [http://tornadoproject.com/safety/safety.htm Tornado Safety] (ᎯᎠ ᎤᏃᎴ ᎠᏎᎸᎯ)
 * [http://www.spc.noaa.gov/faq/tornado/school.html Tornado Preparedness Tips for School Administrators] (NOAA / SPC)
@@ -344,7 +345,7 @@ Tornadoes ᎭᏫᎾᏗᏢ [[Dream interpretation|ᏗᏍᎩᏘᏍᏗ]] ᎠᎴ Ᏹ
 * [http://www.projectshum.org/NaturalDisasters/tornado.html Natural Disasters - Tornado] ᎡᏆ ᏅᎠᏯᏍᏗ ᏄᏍᏗᏓᏅ ᎾᏍᎩᎾᎢ ᎠᏫ ᎠᎩᎾ
 * [http://www.fema.gov/kids/tornado.htm FEMA for Kids: Tornado]
 
-;ᏧᏓᎴᏅᏓ
+===ᏧᏓᎴᏅᏓ===
 * [http://www.americaslibrary.gov/cgi-bin/page.cgi/es/ks/tornado_1 Tornadoes in Kansas] [[Library of Congress|ᎪᏪᎵ ᏕᎦᏅ ᏗᎪᎵᏰᏗ ᏩᏥᏂ ᏗᏂᎳᏫᎩ]], ''ᎠᎺᎵᎨ ᎤᏤᎵ ᎧᏃᎮᎸᏍᎩ''
 * [http://lcweb2.loc.gov/cgi-bin/query/S?pp/pan:@field(SUBJ+@od1(Tornadoes+)) Tornado damage] (ᎭᏫᎾᏗᏢ 1899; archived ᎦᎾᏄᎪᏨᎢ ᏗᎨᎦᏟᎶᏍᏔᏅ)
 * [http://magma.nationalgeographic.com/ngm/0404/feature1/index.html Chasing Tornadoes] ([[National Geographic Magazine|ᎬᎾᏕᎾ Geographic ᎪᏪᎵ ᏗᎪᎵᏰᏗ]])
@@ -353,10 +354,7 @@ Tornadoes ᎭᏫᎾᏗᏢ [[Dream interpretation|ᏗᏍᎩᏘᏍᏗ]] ᎠᎴ Ᏹ
 * [http://www.stormreportmap.com/ Storm Report Map] (ᎡᎶᎯ ᏓᏟᎶᏍᏔᏅ ᎠᎴ ᎦᏅᏅᎢ Tornadoes, ᎦᏁᏐᏍᎬ ᎠᎴ ᎦᏃᎸᎥᏍᎬ ᎬᏂᎨᏒ ᎢᏗᎬᏁᎸ)
 * [http://www.kansascity.com/mld/kansascity/news/breaking_news/14158868.htm person carried by tornado survives.]
 
-[[Category:Weather hazards]]
-[[Category:Severe weather and convection]]
-[[Category:Tornado| ]]
-[[Category:Winds]]
+[[Category:ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ]]
 
 [[af:Tornado]]
 [[an:Tornado]]
