--- a/ᎨᏥᎧᎲᏓ_ᎠᏁᎬᎢ.mw
+++ b/ᎨᏥᎧᎲᏓ_ᎠᏁᎬᎢ.mw
@@ -94,6 +94,9 @@
 
 * {{cite book | last = Wallace | first = Anthony FC | title = The Long, Bitter Trail: Andrew Jackson and the Indians | edition = | publisher = New York: Hill and Wang | year = 1993 | id = ISBN 0-8090-6631-9}}
 
+[[Category:ᏣᎳᎩ]]
+[[Category:ᎸᏃᎮᏍᎩ]]
+
 [[da:Trail of Tears]]
 [[de:Pfad der Tränen]]
 [[en:Trail of Tears]]
