--- a/ᎦᏬᏂᎯᏍᏗ_ᏗᎦᏁᏟᏴᏍᏗ.mw
+++ b/ᎦᏬᏂᎯᏍᏗ_ᏗᎦᏁᏟᏴᏍᏗ.mw
@@ -122,3 +122,6 @@ Following are Syllabary maps which map drifted Otali Dialect Language Characters
 *y-80:(119) Ᏸ (ye)
 *k-6:(120) Ꭶ (ga)
 *g-6:(121) Ꭶ (ga)
+
+[[Category:ᎦᏬᏂᎯᏍᏗ]]
+[[Category:ᏣᎳᎩ]]
