--- a/ᎤᏬᏕᏮ.mw
+++ b/ᎤᏬᏕᏮ.mw
@@ -1,16 +1,8 @@
 '''ᎤᏬᏕᏮ'''
-ᎠᎦᏍᎦ, ᎫᏘᏍᎬ, ᎤᏍᏗ ᎦᏃᎯᎵᏙ ᎤᏁᏐᏒ, ᎦᏁᏐᏍᎬᏃ ᎢᎦ ᏧᏓᎴᏅᏓ ᎤᏬᏕᏮ
-ᎨᏒᎢ. ᏄᏗᏞᎬ, ᏄᏴᏢᏃ ᎠᏯᎥ ᎤᎶᎩᎸ ᎦᏃᎮᏍᎪ ᎢᏳᏍᏗ ᎤᏬᏕᏮ ᏂᏗᎦᎵᏍᏔᏂᏒᎢ.
-ᎤᏃᎴ ᎠᏯᎥ ᎤᎶᎩᎸ ᏳᏁᏌᏴᏜᏓ ᎠᎹ ᎤᏪᏍᏉᏨ ᎾᎥ ᏂᏓᏓᏗᏍᎪᎢ. ᏧᏍᏗ
-ᏧᏪᏍᏉᏨ ᏓᏠᏍᎬ ᏧᏔᎾ ᏂᏕᎦᎵᏍᏗᏍᎪᎢ. ᏄᏍᏛ ᎠᏯᎥ ᎤᎶᎩᎸ ᏱᎦᏁᏍᏓᎵᎠ,
-ᎠᏙᏢᏍᎪ ᎤᎦᏅᏗ. ᏂᎦᏁᏍᏓᎵᏗᏍᎬᎾ ᏱᎩ Ꮎ ᏧᏪᏍᏉᏨ ᏕᎦᏁᏍᏓᎳᏗᏍᎪ
-ᎤᎸᏌᏗ ᎢᏳᏍᏗ ᎤᏁᏍᏓᎵ. ᎯᎢᎾ ᏧᎸᏌᏗ ᏗᏁᏍᏓᎵ ᏱᏚᏠᏌ ᎠᏙᏢᏍᎪ ᎤᏅᏥ
-ᎦᏃᎯᎵᏙᎲ. ᏍᏈᏍᏗ ᏱᏚᏓᏟᏌᎿ ᏓᏙᏢᏍᎪ ᎤᏂᏥ ᎦᏃᎯᎵᏙᎯ ᎦᏙᎯᏴ ᏱᏫᎪᎰᎯ.
+ᎠᎦᏍᎦ, ᎫᏘᏍᎬ, ᎤᏍᏗ ᎦᏃᎯᎵᏙ ᎤᏁᏐᏒ, ᎦᏁᏐᏍᎬᏃ ᎢᎦ ᏧᏓᎴᏅᏓ ᎤᏬᏕᏮ ᎨᏒᎢ. ᏄᏗᏞᎬ, ᏄᏴᏢᏃ ᎠᏯᎥ ᎤᎶᎩᎸ ᎦᏃᎮᏍᎪ ᎢᏳᏍᏗ ᎤᏬᏕᏮ ᏂᏗᎦᎵᏍᏔᏂᏒᎢ. ᎤᏃᎴ ᎠᏯᎥ ᎤᎶᎩᎸ ᏳᏁᏌᏴᏜᏓ ᎠᎹ ᎤᏪᏍᏉᏨ ᎾᎥ ᏂᏓᏓᏗᏍᎪᎢ. ᏧᏍᏗ ᏧᏪᏍᏉᏨ ᏓᏠᎬ ᏧᏔᎾ ᏂᏕᎦᎵᏍᏗᏍᎪᎢ. ᏄᏍᏛ ᎠᏯᎥ ᎤᎶᎩᎸ ᏱᎦᏁᏍᏓᎵᎠ, ᎠᏙᏢᏍᎪ ᎤᎦᏅᏗ. ᏂᎦᏁᏍᏓᎵᏗᏍᎬᎾ ᏱᎩ Ꮎ ᏧᏪᏍᏉᏨ ᏕᎦᏁᏍᏓᎳᏗᏍᎪ ᎤᎸᏌᏗ ᎢᏳᏍᏗ ᎤᏁᏍᏓᎵ. ᎯᎢᎾ ᏧᎸᏌᏗ ᏗᏁᏍᏓᎵ ᏱᏚᏠᏌ ᎠᏙᏢᏍᎪ ᎤᏅᏥ ᎦᏃᎯᎵᏙᎲ. ᏍᏈᏍᏗ ᏱᏚᏓᏟᏌᎿ ᏓᏙᏢᏍᎪ ᎤᏂᏥ ᎦᏃᎯᎵᏙᎯ ᎦᏙᎯᏴ ᏱᏫᎪᎰᎯ.
 
-[[File:Screen shot 2010-09-13 at 10.34.08 PM.png]]
+[[File:Screen shot 2010-09-13 at 10.34.08 PM.png|thumb|600px]]
 
+ᎦᏁᏐᏍᎬ ᎤᏤᎵᏓ ᎨᏐ ᎤᏬᏕᏮ. ᎤᏁᏍᏓᎵ ᎦᏌᏆᎸ ᏳᎵᏍᏔᏅ ᎠᏙᏢᏍᎪ, ᎦᏁᏐᏍᎬ ᎠᏃᏎᎰ, ᏱᏭᏃᎸᏔᎾ ᎠᎦᏍᎬ ᎤᏍᏚᏟᏥᏙᎸ ᏕᎦᏁᏍᏓᎵᏗᏍᎪ ᏚᏴᏢ, ᎦᏅᎳᏗᏴᏃ ᏚᏙᏢᏒᎢ. ᎡᎳᏗᏜ ᏂᏙᎦᎵᏍᏗᏍᎪ ᏫᏗᎦᎶᏍᎬ ᎤᎶᎩᎸ, ᎤᎪᏙ ᎠᎹ ᏧᏪᏍᏉᏨ ᏫᏓᏥᏍᏗᏍᎪ ᎤᏁᏐᏒᎢ. ᎤᏝᏂᎩᏓ ᏳᏃᎸᎾ ᏓᏌᎳᏗᏍᎪ ᎤᏁᏐᏒ ᎦᏅᎳᏗᎠᎬᏘ, ᏐᎢᏃ ᎤᏟᏰᎦᎴᏫᏓ ᎠᏙᏢᏍᎪ ᎤᏁᏍᏓᎵ. ᎥᏍᎩ ᏂᎦᎵᏍᏗᏍᎪᎢ ᎢᏳᏩᎦᏗᎶᏓ. ᎦᏂᎵᏊ ᎡᎵ ᏳᏓᎨᏓ ᏱᏄᎵᏍᏔᎾ ᏥᎦᏁᏐᏍᎪᎢ.
 
-ᎦᏁᏐᏍᎬ ᎤᏤᎵᏓ ᎨᏐ ᎤᏬᏕᏮ. ᎤᏁᏍᏓᎵ ᎦᏌᏆᎸ ᏳᎵᏍᏔᏅ ᎠᏙᏢᏍᎪ, ᎦᏁᏐᏍᎬ ᎠᏃᏎᎰ, ᏱᏭᏃᎸᏔᎾ ᎠᎦᏍᎬ
-ᎤᏍᏚᏟᏥᏙᎸ ᏕᎦᏁᏍᏓᎵᏗᏍᎪ ᏚᏴᏢ, ᎦᏅᎳᏗᏴᏃ ᏚᏙᏢᏒᎢ. ᎡᎳᏗᏜ ᏂᏙᎦᎵᏍᏗᏍᎪ ᏫᏗᎦᎶᏍᎬ ᎤᎶᎩᎸ, ᎤᎪᏙ
-ᎠᎹ ᏧᏪᏍᏉᏨ ᏫᏓᏥᏍᏗᏍᎪ ᎤᏁᏐᏒᎢ. ᎤᏝᏂᎩᏓ ᏳᏃᎸᎾ ᏓᏌᎳᏗᏍᎪ ᎤᏁᏐᏒ ᎦᏅᎳᏗᎠᎬᏘ, ᏐᎢᏃ ᎤᏟᏰᎦᎴᏫᏓ
-ᎠᏙᏢᏍᎪ ᎤᏁᏍᏓᎵ. ᎥᏍᎩ ᏂᎦᎵᏍᏗᏍᎪᎢ ᎢᏳᏩᎦᏗᎶᏓ. ᎦᏂᎵᏊ ᎡᎵ ᏳᏓᎨᏓ ᏱᏄᎵᏍᏔᎾ ᏥᎦᏁᏐᏍᎪᎢ.
+[[Category:ᏙᏯᏗᎳ ᏄᏍᏗᏓᏅ]]
