--- a/ᎤᏁᎳᏅᎢᎤᏪᏥ.mw
+++ b/ᎤᏁᎳᏅᎢᎤᏪᏥ.mw
@@ -59,6 +59,9 @@ Newton's ᏗᎧᏃᎩᏛ ᎤᎭ ᏗᏙᎳᎩ ᎠᏑᏰᏍᏗ ᎦᏅᏍᎨᏂ Ꮎ
 * "ᎦᏂᏐᏗ ᎯᎠ ᎤᎾᏓᏕᏒᏓ: ᎯᎠ ᎩᎵᏏ ᎠᏗᏒᏍᏗ ᏗᏲᎯᏍᏗ ᎠᏁᎸᏙᏗ", Hochschild, ᎠᏓᏫ, 2005
 <references/>
 
+[[Category:ᏧᎾᏁᏄᏗ ᏗᏁᎸᏙᏗ]]
+[[Category:ᏗᎧᏃᎩᏛ]]
+
 [[de:Amazing Grace]]
 [[en:Amazing Grace]]
 [[eo:Amazing Grace]]
