--- a/ᎣᏍᏛ_ᎧᏃᎮᏛ_ᏣᎳᎩ.mw
+++ b/ᎣᏍᏛ_ᎧᏃᎮᏛ_ᏣᎳᎩ.mw
@@ -53,3 +53,5 @@
 # ᏚᎴᏅᏃ ᎤᏘᏅᏎ ᎠᏲᎵ ᎠᎴ ᎤᏥ, ᎠᎴ ᎢᏏᎵᏱ ᏭᎷᏤᎢ.
 # ᎠᏎᏃ ᎤᏛᎦᏅ ᎠᏥᎳ ᎤᎬᏫᏳᎯ ᎨᏒ ᏧᏗᏱ ᎤᏙᏓ ᎡᎶᏛ ᎤᏓᏁᎢᏴᏍᏓᏁᎸᎢ, ᎤᏍᎦᎴ ᎾᎿ ᏭᎶᎯᏍᏗᏱ; ᎠᏎᏃ ᎤᏁᎳᏅᎯ ᎤᏪᏯᎳᏅᎯ ᎨᏒ ᎠᏍᎩᏓᎬᎢ, ᎨᎵᎵ ᏭᎪᎸᏍᏔᏁᎢ;
 # ᎦᏚᎲᏃ ᎾᏎᎵᏗ ᏧᏙᎢᏛ ᏭᎷᏨ ᎾᎿ ᎡᎮᎢ. ᎾᏍᎩᏃ ᎤᏙᎯᏴᏁ ᎠᎾᏙᎴᎰᏍᎩ ᏧᏂᏁᏤᎢ, ᎾᏎᎵᏗ ᎡᎯ ᎠᎪᏎᎮᏍᏗ, ᏧᎾᏛᏁᎢ.
+
+[[Category:ᏧᎾᏁᏄᏗ ᏗᏁᎸᏙᏗ]]
