/* ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ */ updating cat

--- a/ᏩᎶᏏ.mw
+++ b/ᏩᎶᏏ.mw
@@ -189,8 +189,7 @@
 {{Link FA|id}}
 {{Template:Anura}}
 
-[[Category:Frogs|*]]
-[[Category:Amphibians]]
+[[Category:Animalia]]
 
 [[an:Anura]]
 [[ar:ضفدع]]
