/* External ᏗᏕᎬᏔᏛ */ updating cats

--- a/ᎤᏪᏴ.mw
+++ b/ᎤᏪᏴ.mw
@@ -234,9 +234,7 @@ Rivers ᎠᎾᏍᎬᏘ ᎾᏍᏋ crossed ᎾᎥᎢ:
 == External ᏗᏕᎬᏔᏛ ==
 * [http://www.srbc.net/about.htm Management: River Basin Commissions].
 
-[[Category:Bodies of water]]
-[[Category:Geomorphology]]
-[[Category:Rivers| ]]
+[[Category:ᎠᎹ]]
 
 [[af:Rivier]]
 [[an:Río]]
