--- a/ᎠᎹ.mw
+++ b/ᎠᎹ.mw
@@ -324,8 +324,7 @@ anaditsgv ᎠᎹ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎤᏓᏂᏢᏅ ᎾᎾᎢ [[spring (w
 * [http://www.hkc22.com/environmentaltechnology.html/ Climate change raises markets for environmental technology, drinking water and clean energies]
 * [http://www.phys.unsw.edu.au/~jw/unfreezable.html 'Unfreezable water', bound water and water of hydration]
 
-[[Category:Water| ]]
-[[Category:Natural resources]]
+[[Category:ᎠᎹ| ]]
 
 {{Link FA|ar}}
 {{Link FA|he}}
