--- a/ᎣᎦᎳᎰᎹ.mw
+++ b/ᎣᎦᎳᎰᎹ.mw
@@ -1,16 +1,136 @@
-'''ᎣᎦᎳᎰᎹ'''
+[[File:Flag of Oklahoma.svg|thumb|200px|ᎣᎦᎳᎰᎹ ᏍᎦᏚᎩ ᎦᏓᏗ]]
+[[File:Map of USA OK.svg|thumb|200px]]
+'''ᎣᎦᎳᎰᎹ''' ᏍᎦᏚᎩ ᎦᏓᏗ ᏑᏓᎵᏍᎪ ᎤᎶᏒᏍᏗ ᎢᏳᎾᏓᎴᏅᏓ ᎠᏂᏴᏫᏯ ᏃᎴ ᏧᏂᎦᏴᎵ ᎠᏂᏴᏫᏯ ᏃᎴ ᏧᏂᎦᏴᎵᎨᎢ. ᏌᎪᏂᎨ ᏠᎨᏏ ᏂᏓᏳᏓᎴᏅ ᎨᏒ, ᎠᏣᏓ ᎠᏂᏲᏍᎩ ᎧᏁᎲ ᎦᏓᏗ ᎠᏓᏃᏫ ᏂᎦᎵᏍᏗᏍᎬᎢ. ᎠᏰᏟ ᎠᎵᏍᏕᎵᏙᏗ ᏓᏟᎶᏍᏗ ᎠᏟᎯ ᎠᎩᏌᏌ ᎤᏤᎵ ᎠᎵᏍᏕᎵᏙᏗ. ᏯᎾᏌ ᎤᏁᎦᎸᏅ ᎪᏢᏔᏅ, ᎠᏬᎭᎵ ᏧᎩᏓᏟ ᏗᎦᏔᏅ ᎪᏚᏍᏔᏅ. ᏔᎵ ᏳᏓᎴᎩ ᏓᏟᎶᏍᏗ ᏚᏓᎾᏫᏍᏓ ᏙᎯᏭ ᎬᏒ ᎧᏃᎮᏍᎩ. ᏌᏊ ᎦᏅᎾᏩ ᏙᎯᎨᏒ ᎪᎩᏍᏙᏗ ᏃᎴ ᎠᎵᏬᎢ ᎤᏩᎾᎦᏝᏅ. ᏧᏓᎾᏫᏓᏃ ᎨᏒᏃ ᏓᏟᎶᏍᏛ ᎦᏚ ᎠᎵᏍᏕᎵᏙᏗ ᎠᏂᏴᏫᏯ ᏧᏃᏟᏍᏙᏗ ᏃᏈᏏ ᎠᏎᎯᎲ ᎦᎸᎳᏗ ᎠᏓᏂᏖᏢᏅᎢ.
 
-[[File:Screen shot 2010-09-13 at 9.53.36 PM.png]]
-
-
-'''ᎣᎦᎳᎰᎹ ᏍᎦᏚᎩ ᎦᏓᏗ'''
-
-
-ᎣᎦᎳᎰᎹ ᏍᎦᏚᎩ ᎦᏓᏗ ᏑᏓᎵᏍᎪ ᎤᎶᏒᏍᏗ ᎢᏳᎾᏓᎴᏅᏓ ᎠᏂᏴᏫᏯ
-ᏃᎴ ᏧᏂᎦᏴᎵ ᎠᏂᏴᏫᏯ ᏃᎴ ᏧᏂᎦᏴᎵᎨᎢ. ᏌᎪᏂᎨ ᏠᎨᏏ ᏂᏓᏳᏓᎴᏅ ᎨᏒ,
-ᎠᏣᏓ ᎠᏂᏲᏍᎩ ᎧᏁᎲ ᎦᏓᏗ ᎠᏓᏃᏫ ᏂᎦᎵᏍᏗᏍᎬᎢ. ᎠᏰᏟ ᎠᎵᏍᏕᎵᏙᏗ
-ᏓᏟᎶᏍᏗ ᎠᏟᎯ ᎠᎩᏌᏌ ᎤᏤᎵ ᎠᎵᏍᏕᎵᏙᏗ. ᏯᎾᏌ ᎤᏁᎦᎸᏅ ᎪᏢᏔᏅ,
-ᎠᏬᎭᎵ ᏧᎩᏓᏟ ᏗᎦᏔᏅ ᎪᏚᏍᏔᏅ. ᏔᎵ ᏳᏓᎴᎩ ᏓᏟᎶᏍᏗ ᏚᏓᎾᏫᏍᏓ
-ᏙᎯᏭ ᎬᏒ ᎧᏃᎮᏍᎩ. ᏌᏊ ᎦᏅᎾᏩ ᏙᎯᎨᏒ ᎪᎩᏍᏙᏗ ᏃᎴ ᎠᎵᏬᎢ
-ᎤᏩᎾᎦᏝᏅ. ᏧᏓᎾᏫᏓᏃ ᎨᏒᏃ ᏓᏟᎶᏍᏛ ᎦᏚ ᎠᎵᏍᏕᎵᏙᏗ ᎠᏂᏴᏫᏯ
-ᏧᏃᏟᏍᏙᏗ ᏃᏈᏏ ᎠᏎᎯᎲ ᎦᎸᎳᏗ ᎠᏓᏂᏖᏢᏅᎢ.
+[[Category:ᎠᎹᏰᎵ]]
+[[af:Oklahoma]]
+[[ang:Oklahoma]]
+[[ar:أوكلاهوما]]
+[[an:Oklahoma]]
+[[arc:ܐܘܟܠܐܗܘܡܐ]]
+[[frp:Oklahoma]]
+[[ast:Oklahoma]]
+[[gn:Oklahoma]]
+[[az:Oklahoma]]
+[[bn:ওক‌লাহোমা]]
+[[zh-min-nan:Oklahoma]]
+[[be:Штат Аклахома]]
+[[be-x-old:Аклагома]]
+[[bcl:Oklahoma]]
+[[bi:Oklahoma]]
+[[bs:Oklahoma]]
+[[br:Oklahoma]]
+[[bg:Оклахома]]
+[[ca:Oklahoma]]
+[[cv:Оклахома]]
+[[cs:Oklahoma]]
+[[cy:Oklahoma]]
+[[da:Oklahoma]]
+[[pdc:Oklahoma]]
+[[de:Oklahoma]]
+[[nv:Halgai Hóteel Hahoodzo]]
+[[et:Oklahoma]]
+[[el:Οκλαχόμα]]
+[[en:Oklahoma]]
+[[es:Oklahoma]]
+[[eo:Oklahomo]]
+[[eu:Oklahoma]]
+[[fa:اکلاهما]]
+[[fo:Oklahoma]]
+[[fr:Oklahoma]]
+[[fy:Oklahoma]]
+[[ga:Oklahoma]]
+[[gv:Oklahoma]]
+[[gd:Oklahoma]]
+[[gl:Oklahoma]]
+[[frr:Oklahoma]]
+[[gu:ઓક્લાહોમા]]
+[[hak:O-khiet-lâ-hò-mâ]]
+[[xal:Оклахом]]
+[[ko:오클라호마 주]]
+[[haw:‘Okalahoma]]
+[[hy:Օկլահոմա]]
+[[hi:ओक्लाहोमा]]
+[[hr:Oklahoma]]
+[[io:Oklahoma]]
+[[ig:Oklahoma]]
+[[bpy:ওকলাহোমা]]
+[[id:Oklahoma]]
+[[ia:Oklahoma]]
+[[ie:Oklahoma]]
+[[ik:Oklahoma]]
+[[os:Оклахомæ]]
+[[is:Oklahoma]]
+[[it:Oklahoma]]
+[[he:אוקלהומה]]
+[[jv:Oklahoma]]
+[[kn:ಒಕ್ಲಹೋಮ]]
+[[pam:Oklahoma]]
+[[ka:ოკლაჰომა]]
+[[kw:Oklahoma]]
+[[sw:Oklahoma]]
+[[ht:Oklawoma]]
+[[ku:Oklahoma]]
+[[lad:Oklahoma]]
+[[la:Oclahoma]]
+[[lv:Oklahoma]]
+[[lb:Oklahoma]]
+[[lt:Oklahoma]]
+[[lij:Oklahoma]]
+[[li:Oklahoma]]
+[[lmo:Oklahoma]]
+[[hu:Oklahoma]]
+[[mk:Оклахома]]
+[[mg:Oklahoma]]
+[[ml:ഒക്‌ലഹോമ]]
+[[mi:Oklahoma]]
+[[mr:ओक्लाहोमा]]
+[[arz:اوكلاهوما]]
+[[ms:Oklahoma]]
+[[mn:Оклахома]]
+[[nah:Oklahoma]]
+[[nl:Oklahoma]]
+[[ja:オクラホマ州]]
+[[no:Oklahoma]]
+[[nn:Oklahoma]]
+[[oc:Oklahoma]]
+[[uz:Oklaxoma]]
+[[pnb:اوکلاہوما]]
+[[pms:Oklahoma]]
+[[nds:Oklahoma]]
+[[pl:Oklahoma]]
+[[pt:Oklahoma]]
+[[ro:Oklahoma (stat SUA)]]
+[[rm:Oklahoma]]
+[[qu:Oklahoma suyu]]
+[[ru:Оклахома]]
+[[sah:Оклаhома]]
+[[sa:ओक्‍लाहोमा]]
+[[sco:Oklahoma]]
+[[sq:Oklahoma]]
+[[scn:Oklahoma]]
+[[simple:Oklahoma]]
+[[sk:Oklahoma]]
+[[sl:Oklahoma]]
+[[szl:Uoklahůma]]
+[[sr:Оклахома]]
+[[fi:Oklahoma]]
+[[sv:Oklahoma]]
+[[tl:Oklahoma]]
+[[ta:ஓக்லகோமா]]
+[[tt:Оклахома]]
+[[te:ఓక్లహోమా]]
+[[th:รัฐโอคลาโฮมา]]
+[[tr:Oklahoma]]
+[[uk:Оклахома]]
+[[ur:اوکلاہوما]]
+[[ug:Oklaxoma Shitati]]
+[[vi:Oklahoma]]
+[[vo:Oklahoma]]
+[[war:Oklahoma]]
+[[yi:אקלעהאמע]]
+[[yo:Oklahoma]]
+[[zh-yue:奧克拉荷馬州]]
+[[diq:Oklahoma]]
+[[bat-smg:Oklahoma]]
+[[zh:奧克拉荷馬州]]
