--- a/ᎠᏬᎭᎵ_ᎠᏬᏚᎯ_ᏧᎩᏓᏟ.mw
+++ b/ᎠᏬᎭᎵ_ᎠᏬᏚᎯ_ᏧᎩᏓᏟ.mw
@@ -1,6 +1,6 @@
-ᏃᏭᏃ ᏱᏙᏓᎦᏂᏴ ᏥᏍᏚ ᏃᏊᎴ ᏧᏝ ᎡᎳᏗᏜ ᎠᏕᏛᏍᎪᎢ ᎦᏣᏄᎳ
-ᎠᏟᏫᏗᏍᎩ ᏓᎶᏂᎨᏍᏙᏗ ᎠᏬᎭᎵ. ᎤᎵᏍᏈᏗ ᎧᏴᏍᎪᏍᏓᏯ,
-ᏗᎪᏍᏓᏱᏃ ᏚᏑᎦᏢ ᏚᏍᏕᎵᏍᎪ ᎤᏒᎦᎵᏗ ᎠᎴ ᎤᎦᎭᎷᏱᏍᏗ
-ᎤᏂᏴᏓ.
+[[File:Screen shot 2010-09-13 at 1.45.14 PM.png|thumb|''Aquila chrysaetos'']]
+ᏃᏭᏃ ᏱᏙᏓᎦᏂᏴ ᏥᏍᏚ ᏃᏊᎴ ᏧᏝ ᎡᎳᏗᏜ ᎠᏕᏛᏍᎪᎢ ᎦᏣᏄᎳ ᎠᏟᏫᏗᏍᎩ ᏓᎶᏂᎨᏍᏙᏗ ᎠᏬᎭᎵ. ᎤᎵᏍᏈᏗ ᎧᏴᏍᎪᏍᏓᏯ,
+ᏗᎪᏍᏓᏱᏃ ᏚᏑᎦᏢ ᏚᏍᏕᎵᏍᎪ ᎤᏒᎦᎵᏗ ᎠᎴ ᎤᎦᎭᎷᏱᏍᏗ ᎤᏂᏴᏓ.
 
-[[File:Screen shot 2010-09-13 at 1.45.14 PM.png]]
+
+[[Category:ᏥᏍᎫ]]
