/* ᎤᏓᏎᎦᏤᏗ ᏗᏕᎬᏔᏛ */ updating cat

--- a/ᎪᎦ.mw
+++ b/ᎪᎦ.mw
@@ -183,8 +183,7 @@ koga ᎪᏢᏗ ᎠᏯᏖᎾ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏓᏯᏂ ᎠᎴ vocali
 * [http://ibc.hbw.com/ibc/phtml/familia.phtml?idFamilia=188 Crow videos] ᎾᎿ ᎯᎠ ᎧᎾᏁᏍ ᏥᏍᏆ ᎤᏓᏂᏝᏅ
 * [http://www.crowbusters.com/ Crow Busters], ᎾᎿ ᎠᎩᏍᎬᎢ ᏗᏲᎯᏍᏗ koga
 
-[[Category:Corvus]]
-[[Category:Heraldic birds]]
+[[Category:ᏥᏍᏆ]]
 
 [[af:Kraai]]
 [[ang:Crāwe]]
