changing ᏗᏟᎶᏍᏙᏗ, +ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ, +cat, +interwiki

--- a/ᎪᏩᎳ_ᏲᎾ.mw
+++ b/ᎪᏩᎳ_ᏲᎾ.mw
@@ -1,6 +1,76 @@
-ᏗᎧᎸᎬᏗᏜ ᎡᎳᏗᏜ ᎠᏁᎰᎢ ᎠᏂᎪᏩᎳ ᏲᎾ. ᎾᎪᎯᎸᏊ ᎠᏁᎲ
-ᏕᏡᎬ ᏚᎾᎩᎶᎢ, ᏓᏂᎩᏍᎬ ᏚᎵᏍᏚᏒᎢ. ᏧᏃᏰᏂ ᏳᏍᏗ ᏚᏙᏢᏐ
-ᏚᏩᏂᎦᏢ ᏧᏂᏂᏴᏗ. ᎠᏂᎪᏩᎳ ᏲᎾ ᎣᏍᏓ ᎨᏐ ᎤᏂᏩᏒᏍᏗ, ᎥᏍᎩᏅ
-ᎤᏂᏍᏕᎵᏍᎪ ᎤᎾᏕᎳᎰᎯᏍᏗ ᏫᎬᏩᏓᎯᏍᏗ ᏱᎩ ᏚᎵᏍᏚᏒᎢ.
+[[File:Phascolarctos cinereus Bonorong.jpg||thumb|180px|''Phascolarctos cinereus'']]
+ᏗᎧᎸᎬᏗᏜ ᎡᎳᏗᏜ ᎠᏁᎰᎢ ᎠᏂᎪᏩᎳ ᏲᎾ. ᎾᎪᎯᎸᏊ ᎠᏁᎲ ᏕᏡᎬ ᏚᎾᎩᎶᎢ, ᏓᏂᎩᏍᎬ ᏚᎵᏍᏚᏒᎢ. ᏧᏃᏰᏂ ᏳᏍᏗ ᏚᏙᏢᏐ ᏚᏩᏂᎦᏢ ᏧᏂᏂᏴᏗ. ᎠᏂᎪᏩᎳ ᏲᎾ ᎣᏍᏓ ᎨᏐ ᎤᏂᏩᏒᏍᏗ, ᎥᏍᎩᏅ ᎤᏂᏍᏕᎵᏍᎪ ᎤᎾᏕᎳᎰᎯᏍᏗ ᏫᎬᏩᏓᎯᏍᏗ ᏱᎩ ᏚᎵᏍᏚᏒᎢ.
 
-[[File:ᎪᏩᎳ ᏲᎾ.jpg]]
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{commons|Koala}}
+
+[[Category:Animalia]]
+
+[[ar:كوالا]]
+[[bn:কোয়ালা]]
+[[zh-min-nan:Koala]]
+[[be:Каала]]
+[[bs:Koala]]
+[[br:Koala]]
+[[bg:Коала]]
+[[ca:Coala]]
+[[cs:Koala medvídkovitý]]
+[[cy:Coala]]
+[[da:Koala]]
+[[de:Koala]]
+[[nv:Shash bizaʼazis hólóní]]
+[[el:Κοάλα]]
+[[en:Koala]]
+[[es:Phascolarctos cinereus]]
+[[eo:Koalo]]
+[[eu:Koala]]
+[[fa:کوآلا]]
+[[fr:Koala]]
+[[ga:Cóála]]
+[[gd:Mathan coala]]
+[[gl:Koala]]
+[[ko:코알라]]
+[[hy:Կոալա]]
+[[hr:Koala]]
+[[io:Koalo]]
+[[id:Koala]]
+[[is:Pokabjörn]]
+[[it:Phascolarctos cinereus]]
+[[he:קואלה]]
+[[ka:ჩანთოსანი დათვები]]
+[[la:Phascolarctos cinereus]]
+[[lv:Koala]]
+[[lt:Koala]]
+[[hu:Koala]]
+[[mk:Коала]]
+[[ml:കൊവാല]]
+[[nl:Koala]]
+[[ja:コアラ]]
+[[no:Koala]]
+[[nn:Koala]]
+[[oc:Phascolarctos cinereus]]
+[[pl:Koala]]
+[[pt:Coala]]
+[[ro:Koala]]
+[[ru:Коала]]
+[[sah:Коала]]
+[[scn:Koala]]
+[[simple:Koala]]
+[[sk:Koala medvedíkovitá]]
+[[sl:Koala]]
+[[sr:Коала]]
+[[sh:Koala]]
+[[su:Koala]]
+[[fi:Koala]]
+[[sv:Koala]]
+[[tl:Koala]]
+[[ta:கோவாலா]]
+[[te:కోలా]]
+[[th:โคอาลา]]
+[[tr:Koala]]
+[[uk:Коала]]
+[[ur:کوآلا]]
+[[ug:دەرەخ خالتىلىق ئېيىقى]]
+[[vi:Koala]]
+[[zh-yue:樹熊]]
+[[zh:無尾熊]]
