+ᎤᎾᏓᏟᏍᎲ, +interwiki, formatting

--- a/ᏎᏗ.mw
+++ b/ᏎᏗ.mw
@@ -1,13 +1,29 @@
 '''ᎬᎿᎨ ᏎᏗ'''
 
-[[File:Black Walnut 004.jpg]]
+[[File:Black Walnut 004.jpg|thumb|200px|''Juglans nigra'']]
 
 ᏗᏐ ᏚᏙᎥ:  ᏎᏗ
 
 ᏣᎳᎩ ᎤᏅᏔᏂᏓᏍᏗ:  ᎬᎿᎨ ᏎᏗ ᎤᏅᏔᏅ ᎠᏂᏣᎳᎩ ᎢᎸᏍᎩ ᏧᎾᏁᏢᏔᏅᏒᎢ. ᎾᏃᏎᏗ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎠᏍᏓᏯ ᏗᎬᏍᏆᎶᏍᏗ ᏥᎩ, ᎣᏍᏓ ᏗᎩᏍᏗ. ᏎᏗᏃ ᎢᏳᏓᎵᎭ ᏩᏁ ᏓᎾᏓᏁᏟᏴᏍᏗᎮ ᎦᎾᏥ ᎠᏃᏢᏍᎬ (ᎦᎾᏥ), ᎢᎦᏓᏃ ᎤᏟ ᎾᏂᏰᎸᏍᎨ ᏩᏁ ᎤᏅᏙᏗ ᏏᏃ ᏎᏗ ᎨᏒᎢ (ᏓᏤᎴ ᎠᎩᏍᏗ ᎠᎴ ᎤᏯᎨᏛ ᎤᏓᏁᏅ).  ᎤᏬᏗᎨ ᎠᏂᏑᏴᏗᎮ Ꮎ ᏎᏗ ᎤᏁᎦᎸᏅ ᏂᏓᏳᏓᎴᏅ, ᎥᏍᎩᏃ ᏎᏗ ᎤᏁᎦᎸᏅ ᏂᏓᏳᏓᎴᏅ ᏓᏅᏗᎮ ᎠᏣᏗ ᏓᎾᎸᏕᏍᏗᎮ.  ᎠᏂᏣᎳᎩᏃ ᎥᏍᎩ ᎠᏓ ᏓᏅᏗᎮ ᏓᏃᏢᏍᎨ ᏗᎦᏅᎯᏗ ᏗᎫᎯᎵᏙᏗ ᏗᎦᏘᏍᏗ. ᎤᏪᏘᏃ ᎨᏎ ᎯᎢᎾ ᏡᎬᎢ ᏚᏂᏨᏍᏓᎵᏗᏍᎬ ᎠᎴ ᏥᏍᎪᏯ ᏓᏂᎯᎲ ᏓᏅᏗᏍᎨ.  Ꮎ ᏡᎬᎢ ᎦᎸᎳᏗᏜ ᏥᏓᏟᎶᏍᏗ, Ꮎ ᎤᏴᏢ ᎧᎸᎬ ᎢᏗᏢ ᏍᎩᏚᎩ ᎦᎸᎳᏗ ᏗᏕᎶᏆᏍᏗᎢ, ᎬᏂᎨᏒ ᎢᎬᏁᎸ ᎢᎩ ᎦᏳᎳ ᏡᎬ ᎠᎴ ᎠᏛᏍᎨ ᎤᎿᎾ ᎠᏏ ᎾᎾᏁᏍᎨᏍᎬᎾᏊ ᏧᎾᏔᏅ ᎠᏂᎨᏳᏣ ᏧᎾᏕᎶᏆᏍᏗ ᏁᎳᏚ ᎢᏍᎪᎯᏧᏈ ᎯᎩᏍᎪᎯ ᎤᏕᏘᏴᏌᏗᏒ.  ᎯᎢᎾ ᏕᏡᎬ ᏔᎵᏧᏈ ᎯᎩᏍᎪᎯ ᏧᏕᏘᏴᏓ ᎢᎪᎯᏗ ᎬᏩᎾᏕᏗ.
 
-[[File:Black Walnut 001.jpg]]
+[[File:Black Walnut 001.jpg|thumb]]
 
 ᏄᏍᏛ ᏗᎧᏃᏗ:   ᎢᏅ ᎢᎦᏘ ᏡᎬᎢ, ᏑᏓᎵᏍᎪᎯ ᎦᎵᏆᏍᎪᎯᏃ ᎢᎳᏏᏓ ᎢᎦᏘ ᎠᎴ ᏅᎩ ᎢᎳᏏᏓ ᏩᏍᏛ ᎢᎩᏗ.  ᏧᎦᎶᎦ ᏤᏆ ᏐᏁᎳ ᏔᎵᏍᎪᎯ ᎢᏴ ᏩᏍᏔ ᎾᏂᎣ ᏚᎵᏍᏚᏐᎢ ᏝᏃ ᏚᏩᎾᎦᏢ ᏥᏂᏚᏍᏗ ᏱᏂᏚᏍᏗ ᎠᎴ ᏗᎪᏍᏓᏱ ᎨᏐᎢ.  ᏚᏯᎸᏒᏃ “X” ᎢᏧᏍᏗ ᏚᏙᏪᎶ ᏗᎪᏟᏍᏙᏗ.  ᎠᏓᏃ ᎨᏒ ᎤᎵᏏᎩ ᎤᏬᏗᎨ ᎤᎵᏑᏫᏓ ᎢᎩ.  ᏌᎶᎵ ᎠᎴ ᎠᏂᏐ ᎠᏁᏯᏔ ᎢᎾᎨ ᎠᏁ ᏎᏗ ᏭᎪᏛ ᎠᎵᏍᏓᏴᏗ ᎤᏂᏰᎸᏐᎢ.
 
 ᎤᎿᎾ ᎠᏩᏛᏗᎢ:  ᎬᎿᎨ ᏎᏗ ᎡᎵᏊ ᏣᎳᎩᎯ ᎠᏰᎵ ᎢᎬᎾᏕᎾ ᎠᏩᏛᏗ.  ᏭᎪᏛ ᎤᏛᎯᏍᏗ ᎨᏒ ᎾᎿ ᏧᏃᎱᎪᏗᎢ, ᎠᏎᏃ ᏕᎧᎾᎷᏍᎬ ᎦᏚ ᏗᏩᏛᏗ ᎢᎨᏐ Ꮎ ᏌᎶᎵ ᏧᎦᏔ ᏚᏂᎧᏅᎢ.
+
+[[Category:Plantae]]
+
+[[da:Sort Valnød]]
+[[de:Schwarznuss]]
+[[en:Juglans nigra]]
+[[es:Juglans nigra]]
+[[fr:Noyer noir]]
+[[it:Juglans nigra]]
+[[lmo:Juglans nigra]]
+[[hu:Fekete dió]]
+[[nl:Zwarte walnoot]]
+[[pms:Juglans nigra]]
+[[pl:Orzech czarny]]
+[[ru:Орех чёрный]]
+[[uk:Горіх чорний]]
