--- a/ᎬᎿᎨᏍᏛ_ᎠᏁᎳ_ᎧᎹᎹ.mw
+++ b/ᎬᎿᎨᏍᏛ_ᎠᏁᎳ_ᎧᎹᎹ.mw
@@ -1,5 +1,3 @@
-ᎬᎿᎨᏍᏛ ᎠᏁᎯ ᎧᎹᎹ ᏫᏚᏁᏋ ᎡᎶᎯ ᎦᏙᎯ ᎠᏁᎯ ᎠᏁᎿᎢ.
-ᏗᎦᏅᎯᏓ ᏓᏂᏴᏌᏛ ᏓᏅᏗᏍᎪ ᎤᏠᏱᏭ ᏧᏃᏰᎾ. ᎠᎹ
-ᎠᏂᎫᎩᏍᏗᏍᎪ ᎤᎾᏗᏔᏍᏗ ᏃᏊᎴ ᎤᏅᏌ ᎠᎹ ᏓᎾᎵᏍᏚᏟᏍᏗᏍᎪ
-ᎤᏁᏌᏴᏜ ᏳᎵᏍᏙᏗ, ᏃᎴ ᏑᎵᏍᏚᏒ ᏱᏓᏂᎾᏌᏁᎩ ᏧᏓᎴᏅᏓ ᎤᏂᏙᏗ
-ᎠᏂᏴᏌᏛᎢ.
+ᎬᎿᎨᏍᏛ ᎠᏁᎯ ᎧᎹᎹ ᏫᏚᏁᏋ ᎡᎶᎯ ᎦᏙᎯ ᎠᏁᎯ ᎠᏁᎿᎢ. ᏗᎦᏅᎯᏓ ᏓᏂᏴᏌᏛ ᏓᏅᏗᏍᎪ ᎤᏠᏱᏭ ᏧᏃᏰᎾ. ᎠᎹ ᎠᏂᎫᎩᏍᏗᏍᎪ ᎤᎾᏗᏔᏍᏗ ᏃᏊᎴ ᎤᏅᏌ ᎠᎹ ᏓᎾᎵᏍᏚᏟᏍᏗᏍᎪ ᎤᏁᏌᏴᏜ ᏳᎵᏍᏙᏗ, ᏃᎴ ᏑᎵᏍᏚᏒ ᏱᏓᏂᎾᏌᏁᎩ ᏧᏓᎴᏅᏓ ᎤᏂᏙᏗ ᎠᏂᏴᏌᏛᎢ.
+
+[[Category:ᏨᏍᎪᏱ]]
