--- a/Dryas_iulia.mw
+++ b/Dryas_iulia.mw
@@ -1,7 +1,7 @@
 [[File:Julia-heliconian-butterfly.jpg|thumb|Dryas julia.]]
-'''Dryas julia''': [[ᎧᎹᎹ]].
+'''Dryas julia''' ᎠᏓᎶᏂᎨ [[ᎧᎹᎹ]].
 
-[[Category:Animalia]]
+[[Category:ᏨᏍᎪᏱ]]
 
 [[en:Dryas iulia]]
 [[fr:Dryas iulia]]
