--- a/Geitoneura_klugii.mw
+++ b/Geitoneura_klugii.mw
@@ -1,7 +1,7 @@
 [[File:Geitoneura klugii2.jpg|thumb|Geitoneura klugii.]]
-'''Geitoneura klugii''': [[ᎧᎹᎹ]].
+'''Geitoneura klugii''' ᎤᏬᏗᎨ [[ᎧᎹᎹ]].
 
-[[Category:Animalia]]
+[[Category:ᏨᏍᎪᏱ]]
 
 [[en:Geitoneura klugii]]
 [[fr:Geitoneura klugii]]
