removing superfluous cat

--- a/ᎠᏣᏗ.mw
+++ b/ᎠᏣᏗ.mw
@@ -2,19 +2,13 @@
 
 [[File:Pieni 2 0139.jpg|none|thumb|400px|ᎠᏣᏗ]]
 
-ᎴᎬᎾᎻ: ''Animalia''
-
-ᏆᎢᎳᎻ: ''Chordata''
-
-ᏗᎦᎪᏗ: ''Actinopterygii''
-
-
-
+*ᎴᎬᎾᎻ: ''Animalia''
+*ᏆᎢᎳᎻ: ''Chordata''
+*ᏗᎦᎪᏗ: ''Actinopterygii''
 
 {{stub}}
 
-[[Category:Animalia]]
-[[Category:ᎠᏣᏗ]]
+[[Category:ᎠᏣᏗ| ]]
 
 [[ab:Аҧсыӡ]]
 [[af:Vis]]
