--- a/ᎩᏟ.mw
+++ b/ᎩᏟ.mw
@@ -14,7 +14,8 @@
 | genus = ''Canis''
 }}
 ᎩᏟ (''Canis lupus familiaris'').
-ᎩᏟ ᎤᎳᏉᏗ ᏪᏌ ᏧᎨᎲᏍᏗ.
+ᎩᏟ ᎤᎳᏉᏗ ᏪᏌ ᏧᎨᎲᏍᏗ. ᎠᏣᎳᎩ ᎩᏟ "Carolina ᎩᏟ" "ᎠᎹᏰᎵ ᏗᏂᎪ"-Ꭸ.
+[[File:Carolinas1.jpg|thumb|left|"Carolina ᎩᏟ" "ᎠᎹᏰᎵ ᏗᏂᎪ"-Ꭸ.]]
 {{stub}}
 
 
